--- a/src/guide/statistics/2.md
+++ b/src/guide/statistics/2.md
@@ -15,7 +15,7 @@ order: 2
 
 <img src="/img/stats/Lへの実験結果.png" alt="" class="mr-0 ml-auto my-4" width="400px" >
 
-薬Zを飲んだほうが，飲まない場合に比べて身長が3cm伸びています．つまり，薬の効果は+3cm身長を伸ばすことです．薬は明らかに効果があるので，子供Lにも薬Zを使用したところ，L'の場合と全く同じように1年で身長は9cm伸び，115cmになりました．
+薬Zを飲んだほうが，飲まない場合に比べて身長が5cm伸びています．薬は明らかに効果があるので，子供Lにも薬Zを使用したところ，L'と全く同じように15年で71cm伸び，177cmになりました．
 
 ## 2.2 <small>次なる意思決定</small>
 
@@ -55,8 +55,8 @@ $$
 <tr>
 <th>子</th>
 <th>5歳0日</th>
-<th>6歳0日 薬+</th>
-<th>6歳0日 薬-</th>
+<th>20歳0日 薬+</th>
+<th>20歳0日 薬-</th>
 <th>薬の効果</th>
 </tr>
 </thead>
@@ -64,44 +64,44 @@ $$
 <tr>
 <td>L</td>
 <td>106.0cm</td>
-<td>114.0cm</td>
-<td>112.0cm</td>
-<td class="bg-green-200">+2cm</td>
+<td>177.0cm</td>
+<td>172.0cm</td>
+<td class="bg-green-200">+5.0cm</td>
 </tr>
 <tr>
 <td>M</td>
 <td>102.5cm</td>
-<td>111.4cm</td>
-<td>108.1cm</td>
+<td>171.4cm</td>
+<td>168.1cm</td>
 <td class="bg-green-200">+3.3cm</td>
 </tr>
 <tr>
 <td>N</td>
 <td>112.9cm</td>
-<td>120.3cm</td>
-<td>121.8cm</td>
+<td>182.3cm</td>
+<td>180.8cm</td>
 <td class="bg-red-300">-1.5cm</td>
 </tr>
 <tr>
 <td>O</td>
 <td>107.2cm</td>
-<td>114.4cm</td>
-<td>113.6cm</td>
-<td class="bg-green-200">+0.8cm</td>
+<td>170.3cm</td>
+<td>166.6cm</td>
+<td class="bg-green-200">+3.7cm</td>
 </tr>
 <tr class="border-b-2 border-black">
 <td>P</td>
 <td>108.1cm</td>
-<td>115.0cm</td>
-<td>114.5cm</td>
-<td class="bg-green-200">+0.5cm</td>
+<td>176.0cm</td>
+<td>171.5cm</td>
+<td class="bg-green-200">+4.5cm</td>
 </tr>
 <tr>
 <td>平均</td>
 <td>107.34cm</td>
-<td>115.02cm</td>
-<td>114.0cm</td>
-<td class="bg-yellow-200">+1.02cm</td>
+<td>175.02cm</td>
+<td>172.02cm</td>
+<td class="bg-yellow-200">+3.0cm</td>
 </tr>
 </tbody>
 </table>
@@ -111,14 +111,14 @@ $$
 
 - Nは薬Zを飲まないほうが背が伸びる．つまりNに対する薬の効果は負．
 - 他の4人については薬を飲んだほうが背が伸びる．
-- 5人に対する薬の効果の平均は，\\( \frac {2 + 3.3 -1.5 + 0.8 + 0.5}{5} = +1.02cm \\)．
+- 5人に対する薬の効果の平均は，\\( \frac {+ 5 + 3.3 -1.5 + 3.7 + 4.5}{5} = +3.0cm \\)．
 {.pt-4}
 
-3つ目の事実は，薬を飲んだほうが**平均して**1.02cm身長が高くなることを示しています．このように**平均して**高くなるならば，たとえNのように薬を飲んで身長が小さくなった人がいても，薬Zを使うことにする，というのがDr.Kの決断です．
+3つ目の事実は，薬を飲んだほうが**平均して**3cm身長が高くなることを示しています．このように**平均して**高くなるならば，たとえNのように薬を飲んで身長が小さくなった人がいても，薬Zを使うことにする，というのがDr.Kの決断です．
 
 ## 2.4 <small>薬Zの平均効果の定義</small>
 
-さて，この薬による平均的な身長への効果は，薬群とプラセボ群の平均差 \\( 115.02 - 114.0 = 1.02 \\)によっても求められます．そこで今後は，
+さて，この薬による平均的な身長への効果は，薬群とプラセボ群の平均差 \\( 175.02 - 172.02 = 3 \\)によっても求められます．そこで今後は，
 
 <div class="max-md:text-sm pt-4">
 $$
@@ -150,16 +150,16 @@ $$
 
 まず，ステップ1の実施が必要なこと，つまり，「薬Zを使用する予定のJ国の5歳0日児全員」<small>(以下これを**全員**と呼びます)</small>を集める必要があることを説明します．というのも，もし全員集める必要がないのなら，仮に実施が困難であっても，やらなければいいだけで問題ではないからです．
 
-そこで，もし全員を集めてこないで，例えば先程の5人の結果だけで，薬を使うべきかを判断したとしましょう．しかし，この判断方法には問題があります．なぜなら，この5人の結果と全員の結果は一致するとは限らないからです．たまたまこの5人は薬がよく効いただけかもしれず，人数を増やせば違う結果になっていたかもしれません．例えば5人を追加して調べてみると，以下のような結果となるかもしれません．
+そこで，もし全員を集めてこないで，例えば先程の5人の結果だけで，薬を使うべきかを判断したとしましょう．しかし，この判断方法には問題があります．なぜなら，この5人の結果と全員の結果は一致するとは限らないからです．たまたまこの5人は薬がよく効いただけかもしれず，例えば5人を追加して調べてみると，以下のような結果となるかもしれません．
 
-<div id="10人への実験の結果，薬の効果がない場合" class="my-12" style="overflow-x:auto;">
+<div id="5人への実験の結果" class="my-12" style="overflow-x:auto;">
 <table>
 <thead>
 <tr>
 <th>子</th>
 <th>5歳0日</th>
-<th>6歳0日 薬+</th>
-<th>6歳0日 薬-</th>
+<th>20歳0日 薬+</th>
+<th>20歳0日 薬-</th>
 <th>薬の効果</th>
 </tr>
 </thead>
@@ -167,50 +167,88 @@ $$
 <tr>
 <td>L</td>
 <td>106.0cm</td>
-<td>114.0cm</td>
-<td>112.0cm</td>
-<td class="bg-green-200">+2cm</td>
+<td>177.0cm</td>
+<td>172.0cm</td>
+<td class="bg-green-200">+5.0cm</td>
 </tr>
 <tr>
 <td>M</td>
 <td>102.5cm</td>
-<td>111.4cm</td>
-<td>108.1cm</td>
+<td>171.4cm</td>
+<td>168.1cm</td>
 <td class="bg-green-200">+3.3cm</td>
 </tr>
 <tr>
 <td>N</td>
 <td>112.9cm</td>
-<td>120.3cm</td>
-<td>121.8cm</td>
+<td>182.3cm</td>
+<td>180.8cm</td>
 <td class="bg-red-300">-1.5cm</td>
 </tr>
 <tr>
 <td>O</td>
 <td>107.2cm</td>
-<td>114.4cm</td>
-<td>113.6cm</td>
-<td class="bg-green-200">+0.8cm</td>
+<td>170.3cm</td>
+<td>166.6cm</td>
+<td class="bg-green-200">+3.7cm</td>
 </tr>
-<tr class="border-b-2 border-black">
+<tr >
 <td>P</td>
 <td>108.1cm</td>
-<td>115.0cm</td>
-<td>114.5cm</td>
-<td class="bg-green-200">+0.5cm</td>
+<td>176.0cm</td>
+<td>171.5cm</td>
+<td class="bg-green-200">+4.5cm</td>
 </tr>
 <tr>
+<td>Q</td>
+<td>113.6cm</td>
+<td>172.2cm</td>
+<td>177.0cm</td>
+<td class="bg-red-300">-4.8cm</td>
+</tr>
+<tr>
+<td>R</td>
+<td>104.0cm</td>
+<td>168.0cm</td>
+<td>168.6cm</td>
+<td class="bg-red-300">-0.4cm</td>
+</tr>
+<tr>
+<td>S</td>
+<td>104.4cm</td>
+<td>160.6cm</td>
+<td>164.2cm</td>
+<td class="bg-red-300">-3.6cm</td>
+</tr>
+<tr>
+<td>T</td>
+<td>102.0cm</td>
+<td>166.9cm</td>
+<td>166.7cm</td>
+<td class="bg-green-200">+0.2cm</td>
+</tr>
+<tr>
+<tr class="border-b-2 border-black">
+<td>U</td>
+<td>110.4cm</td>
+<td>173.5cm</td>
+<td>176.6cm</td>
+<td class="bg-red-300">-2.9cm</td>
+</tr>
+<tr >
 <td>平均</td>
-<td>107.34cm</td>
-<td>115.02cm</td>
-<td>114.0cm</td>
-<td class="bg-yellow-200">+1.02cm</td>
+<td>107.11cm</td>
+<td>171.63cm</td>
+<td>170.97cm</td>
+<td class="bg-yellow-200">+0.66cm</td>
 </tr>
 </tbody>
 </table>
 </div>
 
-この結果は調べる人をさらに追加すれば，再び変わるでしょう．そこで，全員を調べれば，もう追加すべき人はいなくなり，結果が変わることはなくなります．つまり，薬の効果が確定するのは，全員の結果を調べた時です．だから，**完全に確実な方法**にしたければ，全員を集めて，全員の結果を調べる必要があります．
+薬を伸びたほうが確かに伸びてはいますが，今やその効果は+0.66cmしかなく，これしか伸びないのなら，薬を使うことは無意味かもしれません．
+
+しかし，この結果は調べる人をさらに追加すれば再び変わるでしょう．結果が変わらなくなるのは，全員を調べたときです．なぜなら，全員を調べれば，もう追加して調べる人はいなくなり，この人たちの結果も踏まえると話が変わる，などということは無くなるからです．だから，**完全に確実な方法**にしたければ，全員を集めて，全員の結果を調べる必要があります．
 
 
 ## 2.7 <small>全員とは誰か？</small>
@@ -230,15 +268,25 @@ $$
 
 ## 2.8 <small>母集団を調べることで薬の真の効果を求められる</small>
 
-以上から「全員を集める」とは，**今後J国で5歳を迎える子供達全てを，時を操作して5歳にした状態で集める**ことになります．人間の複製と同じくらい「集める」ことにも困難があることが分かりますが，このように全員を集めてできる集団を**母集団**と呼びます．
+以上から「全員を集める」とは，**今後J国で5歳を迎える子供達全てを，時を操作して5歳にした状態で集める**ことなのです．そうして，5歳の彼らを複製して，薬群とプラセボ群の身長差を調べれば，これはまさしく全員の結果なので，薬の真の平均的な効果を求められます．
 
-母集団の薬群とプラセボ群の身長差を調べれば，これはまさしく全員の結果なので，薬の真の平均的な効果を求められます．母集団の平均や分散のことを**母平均**とか，**母分散**と言います．$µ^D$は薬群の母平均であり，$µ^P$はプラセボ群の母平均です．
+こう考えると，複製と同じくらい「集める」ことにも困難があることが分かりますが，このように全員を集めてできる集団を**母集団**と呼びます．また，母集団の平均や分散のことを**母平均**とか，**母分散**と言います．$µ^D$は薬群の母平均であり，$µ^P$はプラセボ群の母平均です．
 
 <img src="/img/stats/5人の子供の集団ver.png" alt="" class="mr-0 ml-auto my-4" width="450px" >
 
 ## 2.9 <small>母集団とは介入の対象を全て集めたものである</small>
 
-一般的には，母集団とは，ある介入への効果を知りたい対象を全員集めてきたものです．それゆえ，誰への効果が知りたいのかで母集団は変わります．Dr.Kの例で薬を投与するのは，つまり介入の対象になるのは「J国の5歳0日児全員」なのでこれが母集団になりますが，もっと広く野望を持って，「全世界の5歳0日児全員」に薬を使うことを考えるなら，これが母集団になります．もしくは，ターゲットを絞って，「5歳0日時に平均身長よりも5cm以上低い子供達」だけに薬を投与するなら，これが母集団になります．介入する対象の範囲によって母集団が変わる，というのは非常に重要な観点ですので覚えておきましょう．
+一般的には，母集団とは，ある介入への効果を知りたい対象を全員集めてきたものです．それゆえ，誰への効果が知りたいのかで母集団は変わります．Dr.Kの例で薬を投与するのは，つまり介入の対象になるのは「J国の5歳0日児全員」なのでこれが母集団になりますが，もっと広く野望を持って，「全世界の5歳0日児全員」に薬を使うことを考えるなら，これが母集団になります．ですから，この場合は，全世界で生まれる子供を5歳にした状態で集めてくる必要があります．
+
+もしくは，ターゲットを絞って，「5歳0日時に平均身長よりも5cm以上低いJ国の子供達」だけに薬を投与するなら，これが母集団になります．この場合は，例えば平均身長が106cmなら，
+
+1. 時を操作してJ国の子供を5歳にした状態で集める
+2. 101cm以下の子供だけを抜き取る．
+{.pt-4}
+
+という操作で母集団を集めることができます．
+
+このように，誰に介入するのかによって，母集団は変わります．逆に言うと，母集団を明確に，決められなければ，誰への効果を調べているかが分かっていないことになるので，有効な調査を行うことができません．
 
 ## 2.10　<small>現実に調べられるのはサンプルだけ</small>
 
@@ -262,13 +310,18 @@ $$
 - 一方で，社会階級が上だったり(サンプル2)，両親の身長が高かったり(サンプル3)する子供だけを集めても，それは母集団を代表しているとは考えられないので，彼らへの薬の効果は母集団とは異なるものになるかもしれない．
 {.pt-4}
 
-と思われます．サンプルについて実験を行った場合の平均や分散をサンプル平均やサンプル分散と言います．$m^D$はサンプルの薬群のサンプル平均であり，$m^P$はサンプルのプラセボ群のサンプル平均です．
-
-![サンプルの場合の実験]()
-
-この直観は正しいのですが，それでは，母集団への効果とサンプルへの効果が同じと見なせるために必要な条件は何でしょうか．
+と思われます．この直観は正しいのですが，それでは，母集団への効果とサンプルへの効果が同じと見なせるために必要な条件は何でしょうか．
 
 <img src="/img/stats/3つのサンプルと母集団，等しいとみなせるには？.png" alt="" class="mr-0 ml-auto my-4" width="450px" >
+
+
+話を進める前に，用語を整理します．サンプルについて実験を行った場合の平均や分散を**サンプル平均**や**サンプル分散**と言います．$m^D$はサンプルの薬群のサンプル平均であり，$m^P$はサンプルのプラセボ群のサンプル平均です．
+
+<img src="/img/stats/5人の子供のサンプルver.png" alt="" class="mr-0 ml-auto my-4" width="450px" >
+
+測定される薬の効果$m^D-m^P$は，薬の真の効果$\mu^D-\mu^P$とは完全には一致しませんが，この2つがおおよそ一致する条件，つまり$m^D-m^P \fallingdotseq \mu^D-\mu^P$と見なせる条件を考えたいわけです．この条件が分かれば，ステップ1の困難，母集団を集める，というところはサンプルを代わりに集めることで解決できます．
+
+
 
 ## 2.12 <small>まとめ</small>
 
@@ -286,12 +339,15 @@ $$
 2. 母集団を構成する1人1人を複製すること
 {.pt-4}
 
-困難1.は，母集団への介入の効果とサンプルへの介入の効果が同じと見なせるような良いサンプルを調べることで解決できます．そこで，良いサンプルとなる条件，良いサンプルを集める方法が気になりました．
+困難1.は，母集団への介入の効果とサンプルへの介入の効果が同じと見なせるような良いサンプルを調べることで解決できます．そこで，良いサンプルとなる条件，良いサンプルを集める方法を知りたいのです．
 
-この問題に取り組む前に，困難2.についても現実的な解決方法があることを見ていきます．そしてその方法は困難1も解決がすぐに分かります．つまり，困難1.2.には，ある一つの(とてもシンプルな)解決策があるのです．これが1つのクライマックスです．頑張りましょう．
+この問題に取り組む前に，次回は困難2.について整理することにします．というのも，困難2.の根本部分をよくよく考えると，
 
-この後の流れ:
-困難2.の解決策を知る => 困難1.の解決にもそれが使えることに気づく
+- **複製の必要はない**こと
+- **困難2.は困難1.と本質的に同じ問題**であること
+{.pt-4}
+
+が分かるからです．それゆえ，両者は同じ方法で解決できるのです．
 
 <hr class="my-8 ">
 
@@ -305,8 +361,10 @@ $$
 4. 内閣支持率
 5. 0歳6ヶ月のネズミに成長ホルモン注射が及ぼす影響
 6. ある日に工場で生産した椅子Xの耐久性
+{.pt-4}
 
-解答{.mt-24}
+解答
+{.mt-48}
 
 <div style="overflow-x:auto;">
 <table class="my-4" >
@@ -338,4 +396,4 @@ $$
 </table>
 </div>
 
-<div class="text-xs text-right">参考にしたサイト:<a href="https://ai-trend.jp/basic-study/basic/sample-space/" target="_blank" rel="noopener noreferrer">標本と母集団の違いがすぐわかる解説 | AVILEN AI Trend</a></div>
+<div class="text-xs text-right mb-12">参考にしたサイト:<a href="https://ai-trend.jp/basic-study/basic/sample-space/" target="_blank" rel="noopener noreferrer">標本と母集団の違いがすぐわかる解説 | AVILEN AI Trend</a></div>
