--- a/src/guide/statistics/3.md
+++ b/src/guide/statistics/3.md
@@ -20,7 +20,7 @@ order: 3
 1. 母集団を集めること
 2. 母集団を構成する1人1人を複製すること
 
-のうち，2を解決する方法を見ていきます．
+のうち，1を解決する方法は良いサンプルを集めること，でしたが，良いサンプルとは何か？どう集めればよいか？が分かりませんでした．この問題に取り組む前に，困難2について論点を整理します．
 
 ## 3.2 <small>2集団が同じになるためには同じ個人が存在する必要がある？</small> 
 
@@ -187,7 +187,7 @@ order: 3
 <div class="text-sm">一般的には，ヒストグラムの縦軸は度数，つまりその階級に当てはまる人の数とするのですが，ここでは相対度数(=割合)，つまりその階級に当てはまる人の数を全体の人数で割ったものを縦軸の値としています．</div>
 </div>
 
-こうしてみると，2つの集団は平均は一致しても，身長の分布は違うことが分かります．その結果，中央値や，最大値，分散など，平均以外のデータを集約する値は異なることが分かります．
+こうしてみると，2つの集団は平均は一致しても，身長の分布は違うことが分かります．その結果，中央値や，最大値，分散など，平均以外のデータを集約する値は2集団で異なります．
 
 <div class="overflow-x-scroll my-12" style="width : 100%">
 
@@ -200,7 +200,7 @@ order: 3
 
 ## 3.6.2 <small>分布の一致を同一性の基準とする</small>
 
-一方，2つの分布が等しければ，平均値だけでなく全てのデータの集約値は等しくなることが知られています<small>(これは確率変数，統計量とは何かを理解すれば分かります．これらについては後ほどお話するので，とりあえずは正しいとして受け入れて先に進みましょう)</small>
+一方，2つの分布が等しければ，平均値だけでなく全てのデータの集約値は等しくなることが知られています<small>(これは確率変数，統計量とは何かを理解すれば分かるのですが，これらについては後ほどお話するので，とりあえずは正しいとして受け入れて先に進みましょう)</small>
 
 そこで次の同一性の基準を採用します．
 
@@ -245,15 +245,19 @@ order: 3
 
 <img src="/img/stats/分布が違う場合区別できること.png" alt="" class="mr-0 ml-auto my-4" width="350px" >
 
-それでは，身長の分布が2集団で同じ場合はどうでしょうか．この場合，どの身長についても，その身長が計測される確率は2集団で同じになるので，身長の測定だけでは2集団を区別することができません．つまり，身長の分布が同じであれば，身長の測定だけで2集団を区別することはできないのです．これが集団の等しさを分布の等しさで考えてよいことの直観的な理由です．
+それでは，身長の分布が2集団で同じである場合はどうでしょうか．この場合，どの身長についても，その身長が計測される確率は2集団で同じになるので，身長の測定だけでは2集団を区別することができません．つまり，身長の分布が同じであれば，身長の測定だけで2集団を区別することはできないのです．これが集団の等しさを分布の等しさで考えてよいことの直観的な理由です．
 
-以上から，分布の等しさで同一性を判断することにします．このようにすれば，2集団の大きさが異なる場合であっても，2集団は等しくなり得ることが分かります．<small>(集団の大きさとは集団を構成する人の数，集団の要素の数のことです)</small>
+以上から，分布の等しさで同一性を判断することにします．このようにすれば，2集団の大きさ，つまり集団を構成する人数が異なる場合であっても，2集団は等しくなり得ることが分かります．
 
 ## 3.8 <small>分布が同じ集団を作る方法を知りたい</small>
 
-薬の効果を測定するためには，同一の集団を用意する必要があります．しかし，今やそのためには個人を複製する必要はないことが分かります．あらゆる性質の分布が同じ集団をつくることができれば十分だからです．それでは，どうやってあらゆる性質の分布が同じ集団をつくるか？これが次の問題です．
+さて，そもそも同一の集団を作ろうとしたのは，何のためだったか覚えていますか？薬の使用の有無以外には全く同じ2集団(薬群とプラセボ群)を作るため<small>(そしての差を調べることで，薬の真の効果を測定するため)</small>です．
 
+<img src="/img/stats/5人の子供の集団ver.png" alt="" class="mr-0 ml-auto my-4" width="400px" >
 
+しかし前回の話を思い出せば，この「同一の集団を作る」ということは，困難1「集める」を解決する方法でもあります．つまり，困難1は「母集団への介入の効果とサンプルへの介入の効果が同じと見なせるような良いサンプルを調べること」で解決できるのでしたが，これは「母集団と同一の集団と見なせるサンプルを作る」ことと同じです．
+
+ということは，困難1.2はどちらも「同一の集団を作る」という問題に関わるものであり，その解決のためには，ここまでの話から，あらゆる性質の分布が同じ集団をつくることができれば十分です．それでは，どうやってあらゆる性質の分布が同じ集団をつくるか？これが次の問題です．
 
 
 <div class="hidden">
