--- a/src/guide/statistics/4.md
+++ b/src/guide/statistics/4.md
@@ -7,33 +7,35 @@ title: ランダムサンプル，サンプルサイズ，誤差
 order : 4
 ---
 
-# 4 ランダムサンプル，サンプルサイズ，誤差
+# 4 ランダムサンプル，サンプルサイズ，誤差{.text-2xl .font-bold}
 
-## 4.1 
+## 4.1 <small>前回までの流れ</small>
 
 2集団が同一であるとは，2集団のあらゆる性質の分布が等しいこと，と定義しました．では，実際にあらゆる性質，私たちが知ることのできる性質も，知り得ない性質も全てが等しいような2集団はどうやって作るのでしょうか．
 
 
 <div class="text-sm my-4">逆に，もし2集団の分布が何かしらの点で異なる場合，例えば，身長の伸びを促進する遺伝子Gの分布が異なっていれば，薬の効果と思っていたものは，実はこの遺伝子Gの分布の差に起因していたことがありえ，集団の平均差が薬の効果とはいえなくなります．つまり「薬の効果といっているけど，薬を使った群は，遺伝子Gをたくさんもっている人が多いのだから，これが薬群の身長の伸びが良かった原因で，薬の効果が原因ではないかもしれないよね？」などと反論される可能性があります．</div>
 
-## 4.2 ランダムサンプリング
+## 4.2 <small>ランダムサンプリング</small>
 
 その方法が<b>ランダムサンプリング</b>です．(<b>無作為抽出</b>とも言います．)
 
-ランダムサンプリングとはその名の通り，集団からランダムに，サンプルをとってくることです．例えば6人の集団があります．彼ら1人1人に1~6の番号をふって，サイコロを1度投げ，出た目に対応する番号の人を選ぶことにすれば，それはランダムサンプリングになります．
+ランダムサンプリングとは，集団から等しい確率で1人1人をとってくることです．例えば6人の集団があります．彼ら1人1人に1~6の番号をふって，サイコロを1度投げ，出た目に対応する番号の人を選ぶことにすれば，どの人も1/6で選ばれるので，それはランダムサンプリングになります．
 
 
 ## 4.3 <small>ランダムサンプルすると分布が一致することの説明</small>
 
 ある母集団Qからランダムサンプリングでサンプルを作ることを考えます．例えばQの身長の分布が次のようだったとしましょう．
 
-<img src="/img/stats/集団Qの身長分布.png" alt="" class="mr-0 ml-auto my-4" width="350px" >
+<img src="/img/stats/集団Qの身長分布-annotataed.png" alt="" class="mr-0 ml-auto my-4" width="350px" >
 
 このように母集団の分布や，母平均$µ$や母分散$σ^2$を実際に知るのは困難なのですが，説明のために値を知っているものとして話を進めます．
 
 このとき，Qからランダムサンプリングすれば，例えば96-97cmの人がでる確率は分布から読み取れるように0.06=6%になります．であれば，100人サンプリングすると，96-97cmの人は<b>平均して</b>\\(0.06 \cdot 100 = 6\\)人選ばれることになります．これを全体の人数100で割って割合にすれば，0.06となってQと一致します．他の身長についても同様に考えると，母集団Qとサンプルに含まれる人数は<b>平均して</b>同じ割合になることが分かります．よって，身長の分布は<b>平均すると</b>一致します．
 
-<stbl>平均して</stbl>同じになる，というのは，6%の確率で96-97cmが選ばれるからといって，100人選んでくれば常にちょうど6人が96-97cmとなるわけではないからです．これは公平なコインを100回投げても，必ずしもオモテがちょうど50回出ないことからも明らかでしょう．実際，集団Qから100人サンプリングした場合を5つ見てみると次のようになり，分布はQと一致しているように見えません．実際，どのサンプル平均$m$についても$m≠μ$です．<small>(母分散とサンプル分散の不一致については後々説明があります．)</small>
+<stbl>平均して</stbl>同じになる，というのは，6%の確率で96-97cmが選ばれるからといって，100人選んでくれば常にちょうど6人が96-97cmとなるわけではないからです．これは公平なコインを100回投げても，必ずしもオモテがちょうど50回出ないことからも明らかでしょう．
+
+実際，集団Qから100人サンプリングした場合を5つ見てみると次のようになります．96cm-97cmの人は，4%の場合もあれば，9%の場合もあります．そして，全体の分布もQと同じようには見えませんし，どのサンプル平均$m$も，集団Qの母平均$μ$とは一致していません．
 
 <div class="overflow-y-scroll h-96 mr-0 ml-auto my-4" style="height: 400px; width: 400px" class="pb-4">
 <img src="/img/stats/サンプルサイズ100-1.png" alt="" srcset="">
@@ -43,9 +45,9 @@ order : 4
 <img src="/img/stats/サンプルサイズ100-5.png" alt="" srcset="">
 </div>
 
-ですが，サンプリングしてくる人の数(これを**サンプルサイズ**と言います)を増やすとどうでしょうか．つまり，母集団Qから抜き出す人数をもっと増やしていけば，サンプル中の96-97cmの割合は8%に近づいていきます．これは公平なコインをひたすらに投げていけば，出たオモテの割合が1/2に近づいていくことと同じです．
+ですが，サンプリングしてくる人の数(これを**サンプルサイズ**と言います)を増やすとどうでしょうか．つまり，母集団Qから抜き出す人数をもっと増やすのです．こうすれば，サンプル中の96-97cmの割合は8%に近づいていきます．これは公平なコインをひたすらに投げていけば，出たオモテの割合が1/2に近づいていくことと同じです．
 
-よって，ランダムサンプリングにした人数が十分多ければ，母集団Qとサンプルの身長の分布は一致すると見なせるはずです．実際，100万人サンプリングした場合を5つ見てみると次のようになり，分布・平均はQと常にほとんど一致していることが分かります．<small>(ここでも母分散とサンプル分散はやや不一致ですが，これも後々説明があります．)</small>
+よって，ランダムサンプリングにした人数が十分多ければ，母集団Qとサンプルの身長の分布は一致すると見なせるはずです．実際，100万人サンプリングした場合を5つ見てみると次のようになり，どのサンプルでも，サンプル平均$m$は母平均$μ=100.5$と，ほとんど一致していることが分かります．
 
 <div class="overflow-y-scroll h-96 mr-0 ml-auto my-4" style="height: 400px; width: 400px" class="pb-4">
 <img src="/img/stats/サンプルサイズ100万.png"  >
@@ -63,13 +65,17 @@ order : 4
 
 身長以外の性質の分布についても，全く同じ理屈でサンプルサイズが十分大きければ，母集団とサンプルで分布は一致します．私たちが知り得る性質も，知り得ない性質も，全ての性質の分布が一致するのです．つまり，母集団とサンプルは同一の集団とみなすことができます．
 
-## 4.5 <small>複製する代わりにランダム割当をすればいい</small>
-
-であれば，薬の効果を調べるために，ステップ2の複製は必要ありません．
+## 4.5 <small>母集団の代わりにランダムサンプルで集めたサンプルを調べればいい</small>
 
 <img src="/img/stats/5人の子供の集団ver.png" alt="" class="mr-0 ml-auto my-4" width="430px" >
 
-そのかわりに，
+よって，困難1.「母集団を集めることができない」は，母集団からランダムサンプリングして，十分なサンプルサイズをもつサンプルを作ることで解決できます．こうすれば，そのサンプルは母集団と同一の集団と見なせるからです．
+
+<img src="/img/stats/ランダム抽出.png" alt="" class="mr-0 ml-auto my-4" style="width: 400px;">
+
+## 4.5 <small>複製する代わりにランダム割当をすればいい</small>
+
+困難2の複製の問題も解決されます．複製する必要はないからです．そのかわりに，
 
 1. 集団からランダムサンプリングして半分を抜き出す．
 2. 抜き出した集団を薬群，残った集団をプラセボ群にする．<small>(もちろん逆でも可)</small>
@@ -79,11 +85,6 @@ order : 4
 
 <img src="/img/stats/ランダム割当.png" alt="" class="mr-0 ml-auto my-4" style="width: 400px;">
 
-## 4.5 <small>母集団の代わりにランダムサンプルで集めたサンプルを調べればいい</small>
-
-こうして考えると，もう１つの困難「母集団を集めることができない」も解消されることが分かります．母集団からランダムサンプリングして，十分なサンプルサイズをもつサンプルを作れば，そのサンプルは母集団と同一の集団と見なせるからです．
-
-<img src="/img/stats/ランダム抽出.png" alt="" class="mr-0 ml-auto my-4" style="width: 400px;">
 
 こうして2つの困難は次のように解決されます．
 
@@ -108,7 +109,7 @@ order : 4
 
 確かにサンプルサイズが十分大きくなければ$m=μ$とはならないので，サンプルから薬の効果を完全に正確・確実に求めることはできないのですが，もっと現実的な，小さいサンプルのときには，ただ$m \neq μ$ということしか分からないのでしょうか？そんなことはないはずです．
 
-## 4.8 <small></small>
+## 4.8 <small>集団Qからサンプルをとる例をもう一度見てみる</small>
 
 そこで，もう一度集団QからサンプルサイズN=100のサンプルを，いくつか取り出したものを見てみます．
 
@@ -124,8 +125,8 @@ order : 4
 
 そこで，サンプル平均は母平均からどのくらい離れるものなのかを数字で知りたくなります．それを知るために
 
-1. 集団Qから100人サンプルしたものを1万個つくる．
-2. 1万個のサンプル平均についてのヒストグラムをつくる．
+1. 集団Qから100人ランダムサンプルしたものを1万個つくる．
+2. 1万個のサンプル平均の分布をヒストグラムする．
 
 ということをやってみます．つまり，N=100のサンプルをたくさんとってきて，それぞれサンプル平均を計算し，その分布をヒストグラムに表して，真の母平均からの離れ具合を視覚化してみるのです．結果は次のようになります．
 
@@ -134,11 +135,11 @@ order : 4
 ここから言えるのは次のことです．
 
 1. サンプル平均の平均は母平均$µ=100.50$と一致している．
-2. サンプル平均の分散は，一つ一つのサンプルの分散よりもずっと小さい．
+2. サンプル平均の分散は，一つ一つのサンプルの分散よりもずっと小さい．<small>(例えば，上のN=100の5つのサンプルの分散は18~20でしたが，サンプル平均の分散は0.18と1/100になっています．)</small>
 {.pt-4}
 
 ## 4.8.1 <small>$E[m] = µ$であること</small>
-1.については「サンプル平均の期待値は母平均と一致している」というふうにも言い換えられます．期待値とは直観的には，
+1.については「サンプル平均の**期待値**は母平均と一致している」というふうにも言い換えられます．期待値とは直観的には，
 
 - ランダムに選ばれたサンプル1つ1つから求められる値を
 - たくさんのサンプルについて平均をとった値
@@ -151,7 +152,7 @@ order : 4
 - これが母平均と一致している．
 {.pt-4}
 
-ことから，「サンプル平均の期待値は母平均と一致している」というふうにいえます．これを$E[m] = µ$で表しましょう．Eは期待値(Expected value)の頭文字です．期待値については4.10にも解説を書いたので，そちらも見てください．
+ことから，「サンプル平均の期待値は母平均と一致している」というふうにいえます．これを$E[m] = µ$で表しましょう．Eは期待値(Expected value)の頭文字です．期待値については4.Aにも解説を書いたので，そちらも見てください．
 
 ## 4.8.2 <small>$Nが大きいほどV[m]は小さいこと</small>
 
@@ -167,7 +168,7 @@ order : 4
 <img src="/img/stats/サンプル平均の平均N=100.png" alt=""  width="500px" >
 </div>
 
-前者の分散は約19なのに対して，後者の分散は約0.18です．グラフの横軸の範囲が違うことに注意しましょう．
+前者の分散は約19なのに対して，後者の分散は約0.18です．ヒストグラムの横軸の範囲が違うことに注意しましょう．
 
 サンプルサイズを変えて同様にサンプル平均の分布を作ってみると，さらに事態がはっきりします．例えば，サンプルサイズを200人にした場合で，サンプル平均の分布を調べてみます．つまり，
 
@@ -183,9 +184,9 @@ order : 4
 1. N=100の場合と同じく$E[m] = µ$
 2. N=100よりも，分散が小さい．
 
-1番目の事実は良いでしょう．サンプルサイズNによらず，サンプル平均は**平均して**母平均と一致しているのです．
+1番目の事実は良いでしょう．サンプルサイズNによらず，サンプル平均は平均的には母平均と一致しているのです．
 
-それよりも2番目の事実です．ここから，サンプルサイズを大きくしていけば，分散が小さくなる，つまり，サンプル平均と母平均の誤差が平均して小さくなっていくことが予想できます．そして最終的に十分大きいサンプルでは，分散は0に近づいて，母平均からの散らばりを0と見なせるために，$m=µ$となるのでしょう．実際，サンプルサイズN=100,200,400,1000として，1万個サンプルをとり，サンプル平均の分布を作ったものは次のとおりです．ただし横軸の範囲は見やすいように揃えてあります．
+それよりも2番目の事実です．ここから，サンプルサイズを大きくしていけば，分散が小さくなる，つまり，サンプル平均の母平均からの散らばり，誤差が平均して小さくなっていくことが予想できます．そして最終的に十分大きいサンプルでは，分散は0に近づいて，母平均からの散らばりを0と見なせるために，$m=µ$となるのでしょう．実際，サンプルサイズN=100,200,400,1000として，1万個サンプルをとり，サンプル平均の分布を作ったものは次のとおりです．ただし横軸の範囲は見やすいように揃えてあります．
 
 <div class="overflow-y-scroll h-96 mr-0 ml-auto my-4" style="height: 600px; width: 560px" class="pb-4">
 <img src="/img/stats/サンプル平均の平均N=100.png"  >
@@ -194,7 +195,7 @@ order : 4
 <img src="/img/stats/サンプル平均の平均N=1000.png"  >
 </div>
 
-## 4.9
+## 4.9 <small>サンプルと母集団の関係</small>
 
 以上から，サンプルと母集団の関係について次のことが言えます．ただし，サンプル平均の分散を$V[m]$で表しています．
 
@@ -207,10 +208,9 @@ order : 4
 {.pt-8 .pb-4}
 
 
-現実的にはサンプルサイズNは$V[m]=0$と見なせるほど大きくはできません．それゆえ，真の値$µ^D-µ^P$そのものを知ろうとするのではなく，
-サンプル平均の差$m^D - m^P$とのずれの量を評価する方法が必要になります．例えば，あるサンプルについて，$m^D - m^P= +5cm$となって，真の値とのずれは2cm以内，つまり，$3<µ^D-µ^P<7$ということさえ分かれば，十分に意思決定することできます．
+現実的にはサンプルサイズNは$V[m]=0$と見なせるほど大きくはできません．それゆえ，真の値$µ^D-µ^P$そのものを知ろうとするのではなく，サンプル平均の差$m^D - m^P$とのずれの量を評価する方法が必要になります．例えば，あるサンプルについて，$m^D - m^P= +5cm$となって，真の値とのずれは2cm以内，つまり，$3<µ^D-µ^P<7$ということさえ分かれば，十分に意思決定することできます．
 
-## 4.10
+## 4.10 <small>サンプルサイズNが十分に大きくない場合はサンプルからの誤差が重要</small>
 
 これでサンプルサイズNが十分に大きくない場合の，実験の手順が分かりました．
 
@@ -219,7 +219,7 @@ order : 4
 3. 実験を行って，サンプルの差\\(m^D - m^P\\)から真の薬の効果\\(µ^D - µ^P\\)を推定し，それに誤差がどれだけあるかを考える．
 {.py-4}
 
-## 4.12
+## 4.11 <small>ランダム抽出・割当のときにも本当に同一と見なせるのか，注意が必要</small>
 
 サンプルサイズが大きくないので，
 
@@ -229,17 +229,17 @@ order : 4
 
 ことに注意する必要があります．つまり，ランダム抽出もランダム割当も**平均的に**同一の集団を作ることを保証してくれるだけなので，実際のサンプルではどうなっているかに注意を配る必要があります．
 
-## 4.13
+## 4.12 <small>考えるべき2つの問題点</small>
 
 薬の効果を調べる実験を行うために残された問題は次の2つです．
 
 1. サンプルサイズNをどう設定すればいいか．
-2. サンプルサイズNのサンプルから推定した母集団についての情報に含まれる誤差を，定量的に評価するためにはどうすればいいか．
+2. サンプル平均の母平均との誤差を，定量的に評価するためにはどうすればいいか．
 {.pt-4}
 
 1点目については，もちろん，可能な限り多く集めるという手も1つですが，これは意思決定の方法としては貧弱です．サンプルは多ければ多いほど調べるのにコストがかかるので，必要もないのにたくさん集める必要はありません．誤差がある程度あっても意思決定に困らないことが分かっているなら，許容できる誤差をもとに，最小限必要になるサンプル数を事前に求めておき，コストとの兼ね合いからサンプル数を決めるのが良いでしょう．
 
-2点目については，このシリーズの前半からの姿勢の変化を感じ取ってください．前半では正しい意思決定のために**完全に確実な方法**は何かということを理解しました．このような根本原理を理解することは非常に大切です．しかし，現実的には，完全に確実な方法など実行する必要がないのです．
+2点目については，このシリーズの前半からの姿勢の変化を感じ取ってください．前半では正しい意思決定のために**完全に確実な方法**は何かということを理解しました．このような根本原理を理解することは非常に大切です．しかし，現実的には，完全に確実な方法を実行する必要がある場面はありません．
 
 例えば，真の値100.498023114だったとしましょう．このとき，大体100前後(例えば90~110に真の値があること)であることが分かれば十分な場合もあれば，100.5に近いこと(例えば100.45~100.55に真の値があること)まで知る必要がある場合もあります．例えば高速を運転しているときは，車の速度が大体100km/hであることが分かれば十分ですし，なにかの部品を作るときには正確に100.5cmに近いことを保証する必要があるかも知れません(もちろん，その場合でもぴったり100.498023114cmにする必要などありません)．このように状況に応じて，真の値から許容できる誤差が決まるため，**完全に確実な方法**である方法よりも，ニーズに合わせて低コストで実行可能な，**不確実だけど誤差がどれだけあるかは分かる方法**のほうが好ましいのです．
 
@@ -258,25 +258,25 @@ order : 4
 
 掛け金100円でこのゲームを延々とやり続けて，合計N回やったとしましょう．このとき，Nが十分大きいので，公平なコインであれば，N/2回当たって，N/2回外れるはずです．もちろん完全にピッタリN/2回というわけには行きませんが，Nが大きければほとんどN/2回と見なせるということです．これについては実験しているサイトがあるのでそちらを参照．
 
-であれば，N回で得られるお金は合計$300\cdot \frac{1}{2} N + 0 \cdot \frac{1}{2} N =150N$円です．ゲーム一回あたりに換算，つまり平均をとると，150円となります．これがこのゲームの期待値です．つまり，一回やれば平均150円が得られて，掛け金は100円なので，平均して1回あたり50円の儲けになります．だからこのギャンブルはやるべきでしょう．
+であれば，N回で得られるお金は合計$300\cdot \frac{1}{2} N + 0 \cdot \frac{1}{2} N =150N$円です．ゲーム一回あたりに換算，つまり平均をとると，150円となります．これがこのゲームの期待値です．つまり，一回やれば平均150円が得られて，掛け金は100円なので，平均して1回あたり50円の儲けになります．1ゲームごとに50円が貰えるわけなので，このギャンブルはやるべきでしょう．
 
-素朴には，あるギャンブルの期待値が掛け金を上回るのなら，それはやり続ければお金が増えるゲームなのでやるべき，ということになります．興味がある人は，期待値だけで判断することができない例を解説している面白いyoutubeの動画も見てみましょう．
+素朴には，あるギャンブルの期待値が掛け金を上回るのなら，それはやり続ければお金が増えるゲームなのでやるべき，ということになります．<small>(しかし，これは素朴な考え方で，**期待値が無限大であっても，儲けにならないギャンブル**も存在します．興味がある人は，そのような代表例である，マーチンゲール法を解説している[youtubeの動画](https://www.youtube.com/watch?v=zTsRGQj6VT4&t=762s)も見てみてください．)</small>
 
 ## 4.B <small>普遍(unbiased)と精度(precision)について</small>
 
 4.8において，サンプル平均の期待値は母平均と一致すること，つまり$E[m] = µ$を確認しました．
 
-サンプル平均のように，サンプルから計算される値(一般には**統計量**といいますが，詳しい説明は後ほど)の期待値が，母集団についての何らかの値(一般には**母パラメータ**といいますが，それも後ほど)と一致するとき，その値を**普遍統計量**といいます．これらの用語を使うと，サンプル平均は母平均の普遍統計量だと言えます．
+サンプル平均のように，サンプルから計算される値<small>(例えばサンプル平均．一般には**統計量**といいますが，詳しい説明は後ほど)</small>の期待値が，母集団についての何らかの値<small>(例えば母平均．一般には**母パラメータ**といいますが，それも後ほど)</small>と一致するとき，その値を**普遍統計量**といいます．これらの用語を使うと，サンプル平均は母平均の普遍統計量だと言えます．
 
 一方，これも詳しくは後ほどやりますが，サンプルの分散は母分散の普遍統計量ではありません．つまり$E[s^2] \neq σ^2$なのです．
 
-普遍は英語ではunbiased，つまりバイアスがかかっていないという意味です．統計におけるバイアスを統計誤差ともいいます．普遍でない統計量から母パラメータを推定しようとする場合には，期待値が母パラメータと一致しないことから，ずれが常にあることになります．これは図でいうと，右の2つの状態です．的の真ん中が知りたい母パラメータで，サンプルをとるごとに，ダーツを投げられる(統計量から母パラメータを推定する)わけですが，真ん中からは平均してずれています．一方普遍(unbiased)であれば，平均的には真ん中に一致しています(左2つ)．
+普遍は英語ではunbiased，つまり**バイアス**がかかっていないという意味です．バイアスは**系統誤差**ともいいます．普遍でない統計量から母パラメータを推定しようとする場合には，期待値が母パラメータと一致しないことから，ずれが常にあることになります．これは図でいうと，右の2つの状態です．的の真ん中が知りたい母パラメータで，サンプルをとるごとに，ダーツを投げられる(統計量から母パラメータを推定する)わけですが，真ん中からは平均してずれています．一方普遍(unbiased)であれば，平均的には真ん中に一致しています(左2つ)．
 
 <img src="https://www.researchgate.net/profile/Anna-Karin-Hamberg/publication/297880023/figure/fig2/AS:669096064589835@1536536341243/Measures-of-accuracy-reported-as-bias-and-precision-reported-as-imprecision-of-model.png" alt="" srcset="" width="400px" class="mx-auto my-4">
 
-平均的には真の値と一致しても，どれだけ散らばりがあるのかでpreciseかimpreciseかに分かれます．これは分散の別の表現と捉えてもいいでしょう．系統誤差と対比して偶然誤差と言う言葉もよく使われます．preciseであれば，散らばりは小さく，さらにunbiasedなら真の値を良く推定できることになります．しかし，preciseであっても，バイアスがあれば，ただ外れた値に揃うだけなので意味がありません．
+平均的には真の値と一致しても，どれだけ散らばりがあるのかでpreciseかimpreciseかに分かれます．これは分散の別の表現と捉えてもいいでしょう．系統誤差と対比して**偶然誤差**と言う言葉もよく使われます．preciseであれば，散らばりは小さく，さらにunbiasedなら真の値を良く推定できることになります．しかし，preciseであっても，バイアスがあれば，ただ外れた値に揃うだけなので意味がありません．
 
-ということは第一には普遍(unbiased)であることが重要です．だからこそ普遍統計量は重要なのです．では，普遍統計量がいくつもある場合には最も良いものをどう選べばいいでしょうか．もちろん精度(precision)が高いものを選べばいいですね．ということで，普遍統計量の中でも誤差が最も小さくなるようなものを最良普遍推定量といいます．例えばサンプル平均は最良普遍推定量であることが知られています．
+ということは第一には普遍(unbiased)であることが重要です．だからこそ普遍統計量は重要なのです．では，普遍統計量がいくつもある場合には最も良いものをどう選べばいいでしょうか．もちろん<b>精度(precision)</b>が高いものを選べばいいですね．ということで，普遍統計量の中でも誤差が最も小さくなるようなものを**最良普遍推定量**といいます．例えばサンプル平均は最良普遍推定量であることが知られています．
 
 ほとんど同じ概念として正確度(accuracy)があります．これはunbiasedと同じことです．つまりバイアスがなければ正確なのです．ちなみに，precisionの同義語としてはreliabilityが，accuracyの同義語としてはvalidityがあります．同じ意味をもつ異なる似た用語が多いので混乱しますが，ダーツの図で概念が理解できれば用語を覚える必要ありません．
 
