--- a/src/guide/statistics/5.md
+++ b/src/guide/statistics/5.md
@@ -7,7 +7,7 @@ title: 身長の分布を正規分布で表す
 order : 5
 ---
 
-# 5 身長の分布を正規分布で表す
+# 5 身長の分布を正規分布で表す{.text-2xl .font-bold}
 
 ## 5.1 <small>ヒストグラムと分布は同じものではない</small>
 
@@ -57,11 +57,11 @@ order : 5
 定義2:
 もしくは，ある集団からランダムに1人選んだときに，その人の身長xがa(cm)以上かつb(cm)以下となる確率も，\\( P(a \leqq x \leqq b ) \\)となるから，ランダムサンプリングしたときに，ある身長となる確率の一覧が分布であると考えることもできる．
 
-一般には分布とは，
+一般には\\( P(a \leqq x \leqq b ) \\)は
 
 \\( P(a \leqq x \leqq b )  = \frac {a \leqq x \leqq b となるxの数} {母集団の要素数} \\) 
 
-のことである．
+で求めることが出来る．
 
 ## 5.3 <small>ヒストグラムは有限個の\\( P(a \leqq x \leqq b ) \\)の値を視覚化したものである</small>
 
@@ -77,7 +77,7 @@ order : 5
 
 ## 5.4 <small>分布を関数$p(a,b)$で表す</small>
 
-そこで，ヒストグラムで分布を表現することはやめ，
+そこで，ヒストグラムで分布を表現することは止め，
 
 \\( p(a,b) =  P(a \leqq x \leqq b ) \\) 
 
@@ -127,7 +127,7 @@ order : 5
 3. \\( p(-∞,+∞) = 1 \\) 
 {.py-4}
 
-条件1は，xがピッタリaとなる確率は0だということです．これは一見直観に反するかも知れませんがxは連続的な値をとる場合，ぴったりaという値に等しくなる確率は限りなく低いのです．例えば身長が170cmです，と言っても実際には169.93101･･･cmだったり，170.021943･･･cmだったりします．それゆえ，ぴったり身長が170.00000･･･cmになる確率は0と見なせるわけです．もし仮に$p(a,a)=c(c>0)$となるなら，aは全実数を取れるので，累積確率が1を超えてしまい，矛盾するから0である，と考えてもいいでしょう．
+条件1は，xがピッタリaとなる確率は0だということです．これは一見直観に反するかも知れませんがxは連続的な値をとる場合，ぴったりaという値に等しくなる確率は限りなく低いのです．例えば身長が170cmです，と言っても実際には169.93101･･･cmだったり，170.021943･･･cmだったりします．それゆえ，ぴったり身長が170.00000･･･cmになる確率は0と見なせるわけです．もしくは背理法的に，仮に$p(a,a)=c(c>0)$となるなら，aは全実数を取れるので，累積確率が1を超えてしまい，矛盾するから0である，と考えてもいいでしょう．
 
 条件2は，割合・確率の基本的な性質を表しています．つまり，$a \leqq x \leqq b$と，$b \leqq x \leqq c$は範囲に被りがないので，範囲を繋げた$a \leqq x \leqq c$の割合(確率)は，元の2つの和になります．
 
@@ -156,14 +156,14 @@ order : 5
 \\[p(a,b) + p(b,c) =  \int_{a}^{b} f(x) dx + \int_{b}^{c} f(x) dx = \int_{a}^{c} f(x) dx = p(a,c)\\]
 </div>
 
-3番目の条件は正規化条件と呼ばれますが，f(x)とx軸で囲まれる全面積が1になるという条件になります．
+3番目の条件は**正規化条件**と呼ばれますが，f(x)とx軸で囲まれる全面積が1になるという条件になります．
 
 \\[p(-\infty,+\infty) =  \int_{-\infty}^{+\infty} f(x) dx = 1 \\]
 
 
 ## 5.7 <small>身長の分布には$f(x)$として正規分布がよく当てはまる</small>
 
-身長の分布の場合には，$f(x)$として正規分布を当てはめれば，これらの条件を良く満たすことが知られています．つまり，適当な正規分布$f(x)$を選べば，身長xが$a≦x≦b$となる確率\\( P(a \leqq x \leqq b ) \\)は，正規分布$f(x)$とx軸のaからbで囲まれた面積と等しくなるのです．
+さて，身長の分布の場合には，$f(x)$として正規分布を当てはめれば，これらの条件を良く満たすことが知られています．つまり，適当な正規分布$f(x)$を選べば，身長xが$a≦x≦b$となる確率\\( P(a \leqq x \leqq b ) \\)は，正規分布$f(x)$とx軸のaからbで囲まれた面積と等しくなるのです．
 
 <img src="/img/stats/正規分布の面積は身長の確率を表すこと.png" alt="" class="mr-0 ml-auto mt-8 mb-4" width="560px" >
 
