--- a/src/guide/statistics/6.md
+++ b/src/guide/statistics/6.md
@@ -7,7 +7,7 @@ next : /guide/statistics/7
 previous : /guide/statistics/3
 ---
 
-# 6 正規分布を理解し，分布に当てはめる
+# 6 正規分布を理解し，分布に当てはめる{.text-2xl .font-bold}
 
 ## 6.1 <small>前回の振り返り</small>
 
@@ -59,7 +59,7 @@ previous : /guide/statistics/3
 
 <img src="/img/stats/正規分布とヒストグラムの類似性.png" alt="" class="mr-0 ml-auto my-4" width="560px" >
 
-形が同じになる理由を理解するために正規分布からヒストグラムを生成してみましょう．前提として次のことをおさえましょう．
+形が同じになる理由を理解するために正規分布からヒストグラムを生成してみましょう．前提として次のことをおさえましょう．<small>(**ビン**とはヒストグラムの1つ1つの縦棒のことです)</small>
 
 <img src="/img/stats/ヒストグラムの1つのビンが示すこと.png" alt="" class="mr-0 ml-auto my-4" width="450px" >
 <img src="/img/stats/n=8の場合.png" alt="" class="mr-0 ml-auto my-4" width="450px" >
@@ -279,7 +279,7 @@ $$
 
 これは身長の分布と似たものに見えます．それでは，身長のヒストグラムからも割合平均を使って平均を求めることはできるのでしょうか．
 
-できません．なぜなら，ヒストグラムの1つ1つの縦棒(**ビン**と言います)が表すのは，xが特定の値となる確率$p_x$ではなくある範囲となる確率$P(x_k \leqq x \leqq x_{k+1})$だからです．
+できません．なぜなら，ヒストグラムの1つ1つの縦棒(**ビン**)が表すのは，xが特定の値となる確率$p_x$ではなくある範囲となる確率$P(x_k \leqq x \leqq x_{k+1})$だからです．
 
 <img src="/img/stats/身長のヒストグラムから平均を計算する.png" alt="" class="mr-0 ml-auto my-4" width="550px">
 
@@ -309,7 +309,7 @@ $$
 \\( m = \displaystyle \sum_{k=0}^{n} x_k \cdot p_{x_k} = \displaystyle \sum_{k=0}^{n} x_k \cdot p(x_k,x_{k+1}) = \displaystyle \sum_{k=0}^{n} x_k \cdot f(x_k) \cdot \Delta{x}\\) 
 </div>
 
-が示せます．あとは\\(\lim_{ \Delta{x} \to 0} \\)とすると，
+が示せます．あとは\\(\lim_{ \Delta{x} \to 0} \\)とすると，(区分求積法と同じように考えて)
 
 <div class="overflow-x-auto w-full">
 
@@ -332,6 +332,12 @@ $$
 \\[\int_{-\infty}^{+\infty} xf(x) dx = \mu \\]
 
 であることが知られています．<small>(証明は[このサイト](https://ai-trend.jp/basic-study/normal-distribution/n-parameter-derivation/)を参照．単なる計算なのでスキップ可です．)</small>
+
+それゆえ，
+
+\\[ m = \int_{-\infty}^{+\infty} xf(x) dx = \mu \\]
+
+で，データの平均と$\mu$は一致します．
 
 
 ## 6.14　<small>分散についても本質的には同じで後は計算するだけ</small>
@@ -357,7 +363,7 @@ $$
 
 \\[ s^2 = \sigma^2 + \mu^2 -2\mu^2 + \mu^2 = \sigma^2\\]
 
-となります．以上から，主張を示すことができました．
+となって，データの分散と$\sigma^2$は一致します．以上から，主張を示すことができました．
 
 ## 6.15　<small>まとめ</small>
 
