--- a/src/guide/statistics/7.md
+++ b/src/guide/statistics/7.md
@@ -1,17 +1,21 @@
 ---
 layout: layouts/guide.njk
-title: 正規分布を理解し，分布に当てはめる
+title:  確率変数・確率分布に慣れる
 order : 7
 tags: stat
 next : /guide/statistics/8
 previous : /guide/statistics/6
 ---
 
-# 7 正規分布を理解し，分布に当てはめる{.text-2xl .font-bold}
+# 7 確率変数・確率分布に慣れる{.text-2xl .font-bold}
 
 ## 7.1 今までの流れ
 
-前回までで，母集団の身長の分布は$µ$=母平均，$σ^2$=母分散<small>(これは$σ$=母標準偏差とすることと同じ)</small>を代入した正規分布(これを$N(μ,σ^2)$で表します)であると考えることができました．
+前回までで，母集団の身長の分布は
+
+\\[f(x) = \frac{1}{\sigma \sqrt{2\pi}}e^{\frac{-(x-\mu)^2}{2\sigma}} \\]
+
+に，$µ$=母平均，$σ^2$=母分散<small>(これは$σ$=母標準偏差とすることと同じ)</small>を代入したものだと考えることができました．これを$N(μ,σ^2)$で表すことにします．
 
 このことの意義をもう一度考えてみます．今や母集団の分布は$N(μ,σ^2)$そのものなので，分布を決めるのは，母平均$μ$と母分散$σ^2$の2つだけです．つまり，平均と分散の2つの情報だけを知れば，あらゆるa,bについての\\( P(a \leqq x \leqq b ) \\)を，f(x)を積分することで求められるのです．
 
@@ -71,7 +75,7 @@ $$P(X=k)=\frac{1}{6} \hspace{10pt} (1 \leqq k \leqq 6)$$
 
 <img src="/img/stats/サイコロ投げの分布.png" alt="" srcset=""  url="https://riptutorial.com/r/example/26152/binomial-distribution" class="mr-0 ml-auto my-4" width="350px" >
 
-一般的に1~Nまでの値をとる場合には，
+一般的に1~Nまでの値をとる場合には，離散一様分布は，
 
 $$P(X=k)=\frac{1}{N} \hspace{10pt} (1 \leqq k \leqq N)$$
 
@@ -85,11 +89,17 @@ $$f(x) = \frac{1}{5} \hspace{10pt} (1 \leqq x \leqq 6)$$
 
 $$P(x)=\int_a^b f(x) dx$$
 
-で求められます．これは**一様分布**と呼ばれます．一般的にa~bまでが等確率で出る場合には，
+で求められます．これは**一様分布**と呼ばれます．実際に
+
+$$P(x)=\int_1^6 \frac{1}{5} dx$$
+
+を計算すると，1になる，つまり正規化条件を満たしていることを確認しましょう．<small>(ですので，$\frac{1}{6}$ではなく，$\frac{1}{5}$が正しいのです．)</small>
+
+一般的にa~bまでが等確率で出る場合には，
 
 $$f(x) = \frac{1}{b-a} \hspace{10pt} (a \leqq x \leqq b)$$
 
-となります．ただし，$a \leqq x \leqq b$以外のときは$f(x)=0$．
+となります．ただし，$a \leqq x \leqq b$以外のときは$f(x)=0$です．
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Uniform_Distribution_PDF_SVG.svg/1200px-Uniform_Distribution_PDF_SVG.svg.png" alt="" srcset=""  url="https://en.wikipedia.org/wiki/Continuous_uniform_distribution" class="mr-0 ml-auto my-4" width="350px" >
 
@@ -104,7 +114,7 @@ $$f(x) = \frac{1}{b-a} \hspace{10pt} (a \leqq x \leqq b)$$
 
 は全て確率質量関数です．
 
-一方で，連続的な確率変数の場合は，確率分布は直接的にX=kとなる確率を表すことはできない(X=kとなる確率は0)なので，関数f(x)を積分することで$P(a \leqq x \leqq b)$を表しました．f(x)は一般的には**確率密度関数**と呼ばれます．
+一方で，連続的な確率変数の場合は，X=kとなる確率は0であるゆえ，確率分布は直接的にX=kとなる確率を表すことはできないので，関数f(x)を積分することで$P(a \leqq x \leqq b)$を表します．f(x)は一般的には**確率密度関数**と呼ばれます．
 
 正規分布：$f(x) = \frac{1}{\sigma \sqrt{2\pi}}e^{\frac{-(x-\mu)^2}{2\sigma}}$
 一様分布：$f(x) = \frac{1}{b-a} \hspace{10pt} (a \leqq x \leqq b)$
@@ -113,110 +123,5 @@ $$f(x) = \frac{1}{b-a} \hspace{10pt} (a \leqq x \leqq b)$$
 
 イメージとしては密度を足し合わせることで質量になるように，確率密度関数を積分することで，Xがある値となる確率である値を表すことができる，つまり，確率質量関数と同じものを表すことができるようになるのです．
 
-これらの分布以外にも色々な分布がありますが，全ての確率分布はギャンブルから生まれる，つまり，コイン投げ(ベルヌーイ分布や二項分布など)とサイコロ投げ(一様分布)から導くことができるといっても過言ではありません．しかし王様は正規分布です．詳しい話は10以降で話します．
+これらの分布以外にも色々な分布がありますが，全ての確率分布はギャンブルから生まれる，つまり，コイン投げ(ベルヌーイ分布や二項分布など)とサイコロ投げ(一様分布)から導くことができるといっても過言ではありません．しかし王様は正規分布です．詳しい話は後ほどしましょう．
 
-## 7.6
-
-色々な例を通じて，確率変数と確率分布に馴染めたところで，本題に戻ります．N人を正規分布$N(μ,σ^2)$からランダムサンプリングすることを考えましょう．このとき，k人目の身長を$X_k$とすると，$X_k \sim N(μ, σ^2)$です．
-
-そしてN個の確率変数$X_k \hspace{3pt} (1 \leqq k \leqq N) $はそれぞれ**独立**です．独立とは，それぞれの$X$の値は他の$X$の値に影響されることなく，$N(μ,σ^2)$で定まる確率に従って生じるということです．これは，例えば3人目にサンプリングした人の身長$X_3$は$X_1$や$X_{N-1}$の値がどうであろうと関係なく，$N(μ,σ^2)$で定められる確率である値となることを考えれば，納得できると思います．この独立の概念は非常に重要なのですが，このシリーズでは特別言及しない限り，それぞれの確率変数は独立であると考えてよいです．
-
-サンプル平均 $\overline{X}$は，
-
-$$
-\overline{X} = \frac{1}{N} \sum_{k=1}^{N} X_k
-$$
-
-で求められます．サンプル平均$ \overline{X}$のように，確率変数 $X_1,X_2 \cdots X_N$から計算される値のことを**統計量**といいます．
-
-サンプル平均$ \overline{X}$と母平均$µ$については$E[\overline{X}] = µ$が成り立つのでした．つまり，サンプル平均は母平均の普遍統計量です．
-
-他の統計量として，
-
-$$
-U^2 =\frac{1}{N-1} \sum_{k=1}^N (X_k - \overline {X})^2
-$$
-
-で定義される不偏分散$U^2$があります．普遍という名前の通り，母分散$σ^2$とは$E[U^2]=σ^2$の関係が成り立ちます．一方，サンプル分散$$S^2 =\frac{1}{N} \sum_{k=1}^N (X_k - \overline {X})^2$$も統計量ですが，これは$E[S^2]=\frac{N-1}{N}σ^2$であり，バイアスがあります．つまり，サンプル分散から母分散を推定しようとすると，系統誤差が生じてしまいます．
-
-今後使う統計量は，サンプル平均$ \overline{X}$と不偏分散$U^2$の2つだけです．
-
-サンプル分散$S^2$はサンプル自体の分散を求めるのには使えますが，知りたいのはサンプル自体の分散ではなく母分散です．現実世界で得られるもののほとんどはサンプルですが，知りたいのは母集団に関する情報です．サンプル自体には興味はないので，サンプルについて知れるサンプル分散ではなく，$E[U^2]=σ^2$を満たす不偏分散を使うことになります．
-
-なぜ分母をN-1とすると，期待値が母分散と一致するのかについて[こちら](https://manabitimes.jp/math/1035)を参照してください．
-
-## 7.7
-
-ここで，正規分布には次の性質があります．
-
-<div class="my-8">
-
-A:和に関する再生性
-
-確率変数X,Yが独立で
-    $X \sim N(\mu_1,\sigma_1^{2})$
-    $Y \sim N(\mu_2,\sigma_2^{2})$
-のとき，
-    $X + Y \sim N(\mu_1 + \mu_2, \sigma_1^{2} + \sigma_2^{2})$
-</div>
-
-<div class="my-8">B:定数倍に関する再生性
-
-確率変数Xが
- $X \sim N(\mu,\sigma^{2})$
-のとき，
- $aX + b \sim N(a\mu + b,a^2\sigma^{2})$
-</div>
-
-<div class="my-8">C.標準正規分布
-
-確率変数Xが
- $X \sim N(\mu,\sigma^{2})$
-のとき，
- $\frac{X-\mu}{\sigma} \sim N(0,1)$
-このように，Xを $\frac{X-\mu}{\sigma}$ に変換することを標準化するという．
-</div>
-
-証明はいずれも[このサイト](https://risalc.info/src/st-normal-distribution-summary.html#rep)を参照してください．{.pb-10}
-
-## 7.8
-
-事実A.B.から $X_k \sim N(μ, σ)$なら，
-
-$$ \overline{X} = \frac{1}{N} \sum_{k=1}^{N} X_k \sim N(\mu,\frac{\sigma^{2}}{N}) $$
-
-を示せます．<small>(この証明は，A.B.を使えば簡単に示せるので，わからないければぜひ確認してください．証明は[同じサイト](https://risalc.info/src/st-normal-distribution-summary.html#rep:~:text=%E8%A8%BC%E6%98%8E%E3%82%92%E8%A6%8B%E3%82%8B-,%E6%A8%99%E6%9C%AC%E5%B9%B3%E5%9D%87%E3%81%AE%E6%AD%A3%E8%A6%8F%E5%88%86%E5%B8%83,-%E6%AD%A3%E8%A6%8F%E5%88%86%E5%B8%83)にあります．)</small>
-
-これは正規分布からN個サンプルをとることを繰り返して，サンプル平均の分布を作っていくと
-
-- サンプル平均もまた，正規分布に従うこと
-- サンプル平均の平均は，母平均と一致すること
-- 分散は各サンプルの1/Nとなること
-
-を表しています．これは4.8において，集団Qからサンプルサイズを色々変えてサンプル平均の分布を調べた結果と一致しています．
-
-
-
-<div class="mx-auto my-8 text-sm" style="width: 450px">
-<span class="text-xl">結果1:</span>
-<div class="pb-1">集団Qからの，あるサンプルの分布．サンプルサイズ$N=100$．分散は$18.79cm^2$</div>
-<img src="/img/stats/サンプルサイズ100-2.png" alt="" srcset="" class="pb-3">
-<div>N=100のサンプルをたくさん集めてサンプル平均の分布をつくったもの．正規分布している．平均は母平均と一致し，分散は$0.018cm^2$で，それぞれのサンプルの1/100倍になっていることが分かる．</div>
-<img src="/img/stats/サンプル平均の平均N=100.png"  >
-</div>
-
-
-<div class="text-sm mx-auto pt-10 pb-4" style="width: 450px">
-<span class="text-xl">結果2:</span>
-<div>サンプルサイズNのサンプルのサンプル平均の分布．Nがk倍になると分散は1/k倍になっている．</div>
-<div class="overflow-y-scroll h-96" style="height: 600px; " class="pb-4">
-<img src="/img/stats/サンプル平均の平均N=100.png"  >
-<img src="/img/stats/サンプル平均の平均N=200.png"  >
-<img src="/img/stats/サンプル平均の平均N=400.png"  >
-<img src="/img/stats/サンプル平均の平均N=1000.png"  >
-</div>
-</div>
-
-サンプルサイズNが大きいほど散らばりが小さくなることは4.8の段階で分かりましたが，今や正規分布を当てはめたことで，分散$σ^2$は1/N倍に，散らばり$σ$は$\sqrt{\frac{1}{N}}$倍になることが分かります．正規分布の散らばり=山の幅はσ=標準偏差で決まっていたことを思い出しましょう．忘れた人は[このgeogebraのアプリ]で確認してください．
-
-サンプル平均の標準偏差のことを<b>標準誤差</b>と言います．正規分布を導入することで，サンプル平均が平均的にどれだけ母平均と離れるか(標準誤差)を定量的に評価することができるようになりました．
