--- a/src/guide/statistics/9.md
+++ b/src/guide/statistics/9.md
@@ -1,15 +1,15 @@
 ---
 layout: layouts/guide.njk
-title: 母分散未知の場合の母平均の推定
+title: 母分散未知の場合の母平均の区間推定
 order : 9
 tags: stat
 next : /guide/statistics/10
 previous : /guide/statistics/8
 ---
 
-# 8. σ未知の場合の母平均の推定{.text-2xl .font-bold}
+# 9 σ未知の場合の母平均の推定{.text-2xl .font-bold}
 
-## 8.1
+## 9.1 <small>$\sigma^2$を$U^2$に置き換えるとt分布に従う</small>
 
 母分散$\sigma^2$が分からないときは，
 
@@ -22,23 +22,34 @@ $$ P(\overline{X} - 1.96\frac{\sigma}{\sqrt N} \leqq \mu  \leqq \overline{X} + 1
 
 そこで，$z=\frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}}$の$\sigma^2$を不偏分散$U^2$に置き換えた変数$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$が，tは自由度(N-1)のt分布に従うことを使います．このことを，$t \sim t(N-1) $と表します．
 
-t分布について次のことが成り立ちます．
+t分布とは何でしょうか？正規分布の確率密度関数f(x)が
+
+\\[f(x) = \frac{1}{\sigma \sqrt{2\pi}}e^{\frac{-(x-\mu)^2}{2\sigma}} \\]
+
+で表されたように，t分布の確率密度関数f(t)は，
+
+$$ f(t)=\frac {\Gamma ((\nu +1)/2)}{\sqrt {\nu \pi}\Gamma (\nu /2)} (1+t^{2}/\nu)^{-(\nu +1)/2} $$ 
+
+で表されます．正規分布よりも一層複雑な関数なのですが，ここでも次のことが分かれば十分です．
 
 - t分布$t(\nu)$はtについての関数でパラメータは$\nu $(ニュー)のみ．
 - つまり，$\nu$の値が定まればt分布のグラフは一つに決まる．
 - この$\nu$にサンプル数-1を代入した$t(N-1)$に$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$は従う．
+{.pt-4}
+
+ちなみに，$\Gamma(z)$はガンマ関数と呼ばれる，階乗を拡張した関数ですが，これもzについての関数なので，zに$\nu=N-1$を代入すれば，$\Gamma ((\nu +1)/2)$や$\Gamma (\nu/2)$は定数となります．それゆえ，パラメータνさえ具体的な値に決まればf(t)のグラフは1つに決まることが分かるかと思います．t分布，ガンマ関数の関数形など詳しくは[wikipedia](https://ja.wikipedia.org/wiki/T%E5%88%86%E5%B8%83)を参照してください．
 
 
-## 8.2
+## 9.2 <small>t分布を動かしてみる</small>
 
-そこで，[このサイト](https://www.geogebra.org/m/W9Nz53Ct)で色々なt分布を$\nu$の値を変えて見てみてください．ただしこのサイトでは$\nu$はdfという記号で表されているので注意してください．
+[このサイト](https://www.geogebra.org/m/W9Nz53Ct)で色々なt分布を$\nu$の値を変えて見てみてください．ただしこのサイトでは$\nu$はdfという記号で表されているので注意してください．
 
 以下の事実を確認してください．
 
 - t分布の形は標準正規分布と似ている．
-- そしてνを大きくするほど，t分布は標準正規分布に近づく．つまり，
+- そして$ν$を大きくするほど，t分布は標準正規分布に近づく．つまり，
 - t分布の平均μは0であり，
-- νを大きくするほどt分布の標準偏差σは1に近づく．
+- $ν$を大きくするほどt分布の標準偏差σは1に近づく．
 {.pt-4}
 
 これは次のように考えると納得できます．
@@ -47,34 +58,26 @@ t分布について次のことが成り立ちます．
 - $t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$は$z=\frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}}$に含まれる母分散$\sigma^2$を不偏分散$U^2$に置き換えたものである．
 - よって，サンプル数Nが十分大きければ，t=z．つまり，tとzは同じ分布となる．
 - 以上から，t~t(N-1)より，サンプル数Nが十分大きいとき，t(N-1)は標準正規分布N(0,1)に近づかなければならない．
-- よって，t(ν)はνが大きいとき標準正規分布と一致する．
+- よって，$t(ν)$は$ν$が大きいとき標準正規分布と一致する．
 {.pt-4}
 
-## 8.2 <small>自由度について</small>
+## 9.3 <small>自由度について</small>
 
 正規分布のパラメータ，母平均・母分散が統計的に重要であるように，t分布のパラメータである自由度も，統計的な意義をもつ重要な概念です．実際，自由度N-1は，不偏分散を求める際の分母にもなっています．しかし，今後の話に直接関わりはしないので自由度については他のサイトを参照してください．
 
-## 8.2
-
-正規分布の確率密度関数f(x)が
-
-
-
-であったように，t分布の確率密度関数も気になる人がいるかも知れませんので一応載せておきます．
-
-$\Gamma(z)$はガンマ関数と呼ばれる階乗を拡張した特殊な関数ですが，zについての関数なので，zにサンプル数を代入した$\Gamma ((\nu +1)/2)$や$\Gamma (\nu/2)$は定数です．つまり，パラメータνさえ具体的な値に決まればf(t)のグラフは1つに決まることが分かるかと思います．詳しくはwikipediaを参照してください．
-
-## 8.2
+ 
+## 9.4  <small>なぜ，t分布に従うのか？</small>
 
 では，$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$はなぜ自由度N-1のt分布に従うのでしょうか．これは純粋に数学的に導かれる事実なので，理解するためには数学を理解する必要があります．ひとまずは前回と同じように，
 
 - サンプルを取ってくるごとに，tの値は一つに決まる．μについては私たちは知り得ないが，値は確定しているから，μを知っている神様なら各サンプルについてtの値を計算できる．
-- そしてサンプルをたくさん取り出してtの値をヒストグラムにしてみると，なんらかの確率分布当てはめられそうだと思う．
+- そしてサンプルをたくさん取り出してtの値をヒストグラムにしてみると，なんらかの確率分布が当てはめられそうだと思う．
 - そこで，自由度N-1のt分布という確率分布がピッタリ当てはめられることが(数学的に)求められる．
+{.pt-4}
 
-くらいの理解で統計の本質部分を理解するためには十分です．
+くらいの理解で統計の本質部分を理解するためには十分です．詳しい証明を知りたい人は<a href="https://qiita.com/s0sasaki/items/a27e743251218777e343" target="_blank" rel="noopener noreferrer">こちら</a>を参照すると良いですが，ただの計算なのでスキップして大丈夫です．
 
-## 8.2
+## 9.5 <small>母分散未知の場合の推定</small>
 
 それでは具体的にt分布を使って母平均を推定してみます．再び集団Qとそこからのサンプルを使います．これは，7.11で使ったものと全く同じです．
 
@@ -88,7 +91,7 @@ $\Gamma(z)$はガンマ関数と呼ばれる階乗を拡張した特殊な関数
 <img src="/img/stats/区間推定のための集団Qからのサンプル.png" alt="" srcset="" width="450px" >
 </div>  
 
-$N = 100$ なので，$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$は自由度99のt分布に従います．そして，先程のサイトによると，自由度$ν=99$の場合には，$P(-1.99≦t≦1.99)=0.95$であることが分かります．ということは，サンプルサイズN=100のサンプルをたくさん集めてtを計算していくと，全体の95%のサンプルについては，$-1.99≦t≦1.99$が成り立つことが分かります．そこで$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$を代入して，
+$N = 100$ なので，$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$は自由度99のt分布に従います．そして，<a href="https://www.geogebra.org/m/W9Nz53Ct" target="_blank" rel="noopener noreferrer">先程のサイト</a>によると，自由度$ν=99$の場合には，$P(-1.99≦t≦1.99)=0.95$であることが分かります．ということは，サンプルサイズN=100のサンプルをたくさん集めてtを計算していくと，全体の95%のサンプルについては，$-1.99≦t≦1.99$が成り立つことが分かります．そこで$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$を代入して，
 
 $$
 P(-1.99≦\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}≦1.99)=0.95
@@ -99,7 +102,7 @@ $$
 <div class="max-xl:w-[98%] max-xl:overflow-x-scroll">
 
 $$
-P(\overline{X}-1.99\sqrt{\frac{U^2}{N} }≦ \mu≦\overline{X}+1.99\sqrt{\frac{U^2}{N} })=0.95
+P(\overline{X}-1.99\sqrt{\frac{U^2}{N} }≦ \mu≦\overline{X}+1.99\sqrt{\frac{U^2}{N} })=0.95 \tag{1}
 $$
 
 </div>
@@ -114,243 +117,19 @@ $$
 
 </div>
 
-であり，1.96だったところが，1.99と大きくなっていて，母分散がわからない分だけ不確実性が増えていることが分かります．
+であり，1.96だったところが，1.99と大きくなっていて，母分散がわからない分だけ不確実性が増えていることが分かります．これは自由度99のt分布は，標準正規分布に比べて，平均よりも離れたところでも値が大きいことに対応しています．
 
-あとは，$ \overline{X} = 101.1, N = 50, U^2=4.1^2 $を(*)に代入して計算してみると，
+<img class="mr-0 ml-auto my-4" src="/img/stats/標準正規分布とt分布.jpeg" alt="https://unit.aist.go.jp/mcml/rg-orgp/uncertainty_lecture/t.htmlより引用" srcset="">
+
+あとは，$ \overline{X} = 101.1, N = 50, U^2=4.1^2 $を(1)に代入して計算してみると，
 
 $$
 P( 100.3  \leqq \mu \leqq 101.9) = 0.95
 $$
 
-となります．つまり，95%の確率で$100.3  \leqq \mu \leqq 101.9$となることが分かります．この文の解釈の仕方は7.12でやったのと同じです．信頼区間という言葉を使えば，t分布による母平均の95%信頼区間は$100.3  \leqq \mu \leqq 101.9$になります．
+となります．つまり，<span class="border-b-2 border-green-400 inline-block">95%の確率で$100.3  \leqq \mu \leqq 101.9$となる</span>ことが分かります．この文の解釈の仕方は7.12でやったのと同じです．信頼区間という言葉を使えば，t分布による母平均の95%信頼区間は$100.3  \leqq \mu \leqq 101.9$になります．
 
-ちなみに．このt分布による推定の結果は，7.12で導いた母分散既知のときの結果と一致しています．これは1.99と1.96の違いは，小数第一位までしか見ない今回の状況では無視できるほど小さいということです．
-
-## 8.x
-
-ここまでの道のりが長かったので，何をやろうとしているのかを再確認しましょう．薬ZのJ国の子供達への効果を知りたいのでした．
-
-<img src="/img/stats/サンプルサイズが小さいときの実験手順.png" alt="" srcset="" class="mr-0 ml-auto my-4" width="350px" >
-
-そして，私たちが測定できるのはサンプルの薬群とプラセボ群の結果だけです．ここから薬Zの真の効果$µ^D-µ^P$を推定したいのです．
-
-今までに習得した方法を使うと次のような方法が思いつきます．
-
-1. サンプルの薬群の平均と不偏分散から母薬群の平均をt分布によって推定する．
-2. サンプルのプラセボ群の平均と不偏分散から母プラセボ群の平均をt分布によって推定する．
-3. 1と2の推定の差をとって，真の効果$µ^D-µ^P$を推定する
-
-この方法でも推定はできます．しかしベストな方法とは言えません．
-
-## 8.x
-
-その理由を直観的に説明しましょう(説明は厳密ではありません)．
-
-今推定したい，知りたいことは$µ^D-µ^P$についての情報だけです．しかし，$µ^D$と$µ^P$という2つの情報から推定してしまっています．それゆえ，真の効果$µ^D-µ^P$の推定が正しいためには，$µ^D$と$µ^P$の両方の推定が正しい必要があります．これが問題点です．
-
-例えば，この2つを95%信頼水準で推定したとしましょう．この場合，区間に母平均が入っている確率はそれぞれ95%です．ということは両方正しく区間に入っている確率は，$0.95^2=90%$となります．つまり，真の効果の推定の信頼水準が落ちているのです．
-
-問題点は，知りたいのは$µ^D-µ^P$についての情報だけなのに，$µ^D$と$µ^P$という2つの情報から推定してしまっていることにあります．そこで，直接$µ^D-µ^P$を推定しましょう．
-
-## 8.Y
-
-まず，$ X_k \sim N(μ_1, σ_1) $であるデータ$X_1,X_2 \cdots X_m$と，$ Y_i \sim N(μ_2, σ_2) $であるようなデータ$Y_1,Y_2 \cdots Y_n$があるとき，
-$$
-\overline{X} - \overline{Y} \sim N(\mu_1 -\mu_2,\frac{\sigma_1^{2}}{m}+\frac{\sigma_2^{2}}{n})
-$$
-で，これを標準化して，
-$$
-\frac{(\overline{X} - \overline{Y}) - (\mu_1 -\mu_2)}{\sqrt{\frac{\sigma_1^{2}}{m}+\frac{\sigma_2^{2}}{n}}} \sim N(0,1)
-$$
-です．あとは，母分散$σ_1^2$と$σ_2^2$が分からないので，t分布のときのように，これをサンプルから計算できる値に置き換えます．そこでまずは，$σ^2=σ_1^2=σ_2^2$を仮定します．すなわち，二つの分散は等しいと仮定して，その等しい分散を$σ^2$と置きました．これで，
-$$
-\frac{(\overline{X} - \overline{Y}) - (\mu_1 -\mu_2)}{\sqrt{\sigma^{2}(\frac{1}{m}+\frac{1}{n}})} \sim N(0,1)
-$$
-となります．
-
-あとは$σ^2$をプールされた分散$U_e^2$で置き換えます．具体的には，XとYの不偏分散を$U_X^2,U_Y^2$とおくと，
-$$
-U_e^2=\frac{(m-1)U_X^2+(n-1)U_Y^2}{m+n-2}
-$$
-がプールされた分散です．これで$σ^2$を置き換えると，
-$$
-t=\frac  { (\overline{X} - \overline{Y})  - (\mu_1 -\mu_2) } {\sqrt{U_e^2(\frac{1}{m}+\frac{1}{n})}}
-$$
-となります．
-
-記号で気づく通り，tはt分布に従います．そしてその自由度は(m+n-2)です．これで，$\mu_1 -\mu_2$を推定することができます．
-
-## 8.z
-
-この結果をふまえて実験を実行します．そのためにはサンプルを何人集めるかを考える必要があります．この人数を2Nとしましょう．そして，真の効果を95%信頼区間で推定することにします．
-
-まず，薬群とプラセボ群はN人ずつになります．8.Yの記号をこの例に当てはめると，
-
-<div class="max-xl:w-full max-xl:overflow-x-scroll">
-
-$\overline{X}=m^D,\overline{Y}=m^P,m=N,n=N,\mu_1=\mu^D,\mu_2=\mu^P$
-</div>
-となります．とりあえずこれを代入してtを表してみます．
-
-$$t=\frac  { (m^D - m^P )  - (\mu^D -\mu^P) } {\sqrt{U_e^2(\frac{1}{N}+\frac{1}{N})}}$$
-
-そして，tは自由度(2N-2)のt分布に従います．そして
-$$
-U_e^2=\frac{(N-1)U_D^2+(N-1)U_P^2}{2N-2}
-$$
-となります．ここでサンプル薬群もサンプルプラセボ群の不偏分散も，大体おなじになる，つまり，$U_D^2=U_P^2=U^2$と仮定してみましょう．そもそもこのプールされた分散を使うこと自体が母集団の等分散性を仮定しているので，これは妥当な仮定でしょう．すると，
-
-$$U_e^2=U^2$$
-
-となります．そこで，
-
-$t=\frac  { (m^D - m^P )  - (\mu^D -\mu^P) } {\sqrt{U^2(\frac{2}{N})}}$
-
-となります．
-
-ここで自由度99のときには，95%信頼区間が標準正規分布とほとんど変わらなかったことを思い出しましょう．2N>100にするなら，95%信頼区間は，標準正規分布と同じくらいになるはずなのでラフには，
-
-$$P(-1.96 \leqq t \leqq 1.96) = 0.95$$
-
-となるはずです．もう少し厳しく，$$P(-2 \leqq t \leqq 2) = 0.95$$などとしてもいいでしょう．
-
-これに，tを代入して
-
-<div class="max-xl:w-full max-xl:overflow-x-scroll">
-$$P(-1.96 \leqq \frac  { (m^D - m^P )  - (\mu^D -\mu^P) } {\sqrt{U^2(\frac{2}{N})}} \leqq 1.96) = 0.95$$
-</div>
-
-これを整理して，
-
-<div class="max-xl:w-full max-xl:overflow-x-scroll">
-$$
-P( m^D - m^P -1.96\sqrt{U^2(\frac{2}{N})} \leqq \mu^D -\mu^P \leqq  m^D - m^P+1.96\sqrt{U^2(\frac{2}{N})}) = 0.95
-$$
-</div>
-
-となります．サンプル平均からの誤差は$1.96\sqrt{U^2(\frac{2}{N})}$となるので，これをどれくらいに抑えたいのかによってサンプルサイズが決まります．
-
-- 子供Lに対する結果からは$\mu^D -\mu^P$は少なくとも+1cmはあると予想した
-
-これをふまえて，誤差を0.5cm以内に抑えたいという決断をしたとしましょう．
-
-- 20歳時のサンプルの身長の分散は日本人のデータを使って，$U^2=5.7^2$と予測した．
-
-以上から，
-$$
-1.96\sqrt{5.7^2(\frac{2}{N})} = 0.5
-$$
-をといて，N=999となります．
-
-以上から，サンプルとして2N=2000人集めてくればよいことになります．
-
-ちなみに自由度2N-2=1998のt分布の95%区間は先程のサイトを使うと，ほとんど1.96なのでこの計算はズレていません．
-
-## 8.w
-
-実験の結果，次のとおりになりました．
-
-
-
-先程の話から，自由度1998のt分布に従うtについては，
-
-$$P(-1.96 \leqq t \leqq 1.96) = 0.95$$
-
-なので，(+)式がそのまま使えます．またN=1000のときには，
-$$
-1.96\sqrt{5.7^2(\frac{2}{N})} = 0.5
-$$
-なので，これも利用すれば，
-
-
-
-ということになります．これで，薬の効果を推定することができました．この結果からDr.Kは子供達へ薬を使うことに決めました．
-
-おしまい．
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## 薬の効果の推定
-
-最後に，薬の効果の推定$μ^D-μ^P$の推定です．
-
-
-
-例えばDr.Kの結果はまとめを見ると，
-
-<div class="max-xl:w-[98%] max-xl:overflow-x-scroll ">
-
-$\overline{X}=m^D,\overline{Y} = m^P,U_X=S_D^2,U_Y = S_P^2,m=50,n=50$
-
-</div>
-
-で，自由度98のt分布については，やはりこのサイトを使うと，$P(-1.99≦t≦1.99)=0.95$が分かるので，以上から
-
-<div class="max-xl:w-[98%] max-xl:overflow-x-scroll">
-
-$$
-P( (\overline{X} - \overline{Y}) -1.99\sqrt{U_e(\frac{1}{m}+\frac{1}{n})}  \leqq \mu_1 -\mu_2 \leqq  (\overline{X} - \overline{Y}) +1.99\sqrt{U_e(\frac{1}{m}+\frac{1}{n})}) = 0.95
-$$
-
-</div>
-に値を代入して整理すると，
-$$
-P(1.1≦\mu_1 -\mu_2 ≦4.7) = 0.95
-$$
-と薬の効果を推定できます．
-
-これも，なぜプールした分散$U_e$に置き換えるとt分布になるのか，というのは純粋に数学的な話なのであまり重要ではありません．サンプルを取ってくるたびに，tの値が一つに決まって，tの分布を調べると，(数学的な理屈により)t分布になることが分かる，ということが理解できれば十分です．
-
-https://toketarou.com/t_test/
-
-
-
-## 意思決定だ！
-
-より重要なのは意思決定です．Dr.HとDr.Mの結果についてもまとめたページを見てほしいですが，3人の推定では薬の効果$\mu_1 -\mu_2$の95%信頼区間は，次のようになりました．
-
-やはり食い違いがあります．ここで，サンプルサイズが大きいほど標準誤差が小さくなることを思い出しましょう．それゆえ，3人の結果をばらばらにではなく，まとめたほうがより正確な推定ができることが考えられます．
-
-そこで3人の結果をまとめて，300人の実験結果として薬群，プラセボ群の平均や不偏分散を求めてみます．
-
-これを用いて，もう一度$\mu_1 -\mu_2$を計算してみると次のような結果になります．
-
-以上をもって，薬には1cm程度身長を伸ばす効果があると判断し，薬を使うこととなりました．
-
-おしまい．
-
-
-
-
-
-- だから，サンプルをたくさん取り出してくればサンプルの95%で，$-2.01≦t≦2.01$が成立する．このことは，tに$\frac { \overline{X} - \mu } { \sqrt{S^2/{N} }}$を代入して整理した$\overline{X}-2.01\sqrt{S^2/{N} }≦ \mu≦\overline{X}+2.01\sqrt{S^2/{N} }$についても同様で，100個サンプルがあれば，平均95個のサンプルについては，これが成り立つ．
-
-以上を理解できれば十分です．
-
-
-
-では，$t=\frac { \overline{X} - \mu } { \sqrt{U^2/{N} }}$はなぜ自由度N-1のt分布に従うのでしょうか．これは純粋に数学的に導かれる事実です．統計を理解する上では本質的ではありません．重要なのは，前回と同じように，
-
-- サンプルを取ってくるごとに，tの値は一つに決まる．μについては私たちは知り得ないが，値は確定しているから，μを知っている神様なら各サンプルについてtの値を計算できる．
-- そしてサンプルをたくさん取り出してtの分布のヒストグラムを作ると，それは自由度N-1のt分布という確率分布と一致する．
-
-
-- 自由度ν=50のf(t)については$\int_{-2.01}^{2.01}f(t)dt = 0.95$が成り立つ．これは計算すれば分かるが計算は機械がやってくれるので，その方法を理解する必要はない．すなわち，自由度ν=50のf(t)に従うtについて，$P(-2.01≦t≦2.01)=0.95$である．
-- だから，サンプルをたくさん取り出してくればサンプルの95%で，$-2.01≦t≦2.01$が成立する．このことは，tに$\frac { \overline{X} - \mu } { \sqrt{S^2/{N} }}$を代入して整理した$\overline{X}-2.01\sqrt{S^2/{N} }≦ \mu≦\overline{X}+2.01\sqrt{S^2/{N} }$についても同様で，100個サンプルがあれば，平均95個のサンプルについては，これが成り立つ．
-
-以上を理解できれば十分です．
+ちなみに．このt分布による推定の結果は，8.6で導いた母分散既知のときの結果と一致しています．これは1.99と1.96の違いは，小数第一位までしか見ない今回の状況では無視できるほど小さいということです．
 
 
 
