--- a/src/guide/statistics/1.md
+++ b/src/guide/statistics/1.md
@@ -171,15 +171,6 @@ Dr.Kには今日5歳になった子供Lがいます．ちょうどこの日，Dr
 
 これらの**完全に確実な方法**の欠点は，それが実現不可能だということです．人間をコピーすることはできないし，時間を巻き戻すこともできないからです．しかし，これが可能だとして話を進めてみましょう．
 
-
-<pre style="font-size: 14px; line-height : 16px" class="pt-10 pb-4 w-full overflow-x-auto">
-       _.---._    /\\
-    ./'       "--`\//   時を戻せるので，
-  ./              o \   15年実験したらLも20歳になっているから意味ないじゃん，
- /./\  )______   \__ \  という反論は考えないことにします．
-./  / /\ \   | \ \  \ \
-   / /  \ \  | |\ \  \7
-    "     "    "  "       
-</pre> 
-
-<div class="text-sm leading-5 pt-3"></div>
+<div class="text-sm leading-5 pt-3">
+時を戻せるので，15年実験したらLも20歳になっているから意味ないじゃん，という反論は考えないことにします．
+</div>
