--- a/src/guide/statistics/8.md
+++ b/src/guide/statistics/8.md
@@ -1,27 +1,139 @@
 ---
 layout: layouts/guide.njk
-title: ランダムサンプル，サンプルサイズ，誤差
+title:  母分散未知の場合の母平均の区間推定
 order : 8
 tags: stat
 next : /guide/statistics/9
 previous : /guide/statistics/7
 ---
 
-## 7.9
+# 8 母分散未知の場合の母平均の区間推定{.text-2xl .font-bold}
+
+## 8.1　<small>統計量について</small>
+
+色々な例を通じて，確率変数と確率分布に馴染めたところで，本題に戻ります．N人を正規分布$N(μ,σ^2)$からランダムサンプリングすることを考えましょう．このとき，k人目の身長を$X_k$とすると，$X_k \sim N(μ, σ^2)$です．
+
+そしてN個の確率変数$X_k \hspace{3pt} (1 \leqq k \leqq N) $はそれぞれ**独立**です．独立とは，それぞれの$X$の値は他の$X$の値に影響されることなく，$N(μ,σ^2)$で定まる確率に従って生じるということです．これは，例えば3人目にサンプリングした人の身長$X_3$は$X_1$や$X_{N-1}$の値がどうであろうと関係なく，$N(μ,σ^2)$で定められる確率で，ある値となることを考えれば，納得できると思います．この独立の概念は非常に重要なのですが，このシリーズでは特別言及しない限り，それぞれの確率変数は独立であると考えてよいです．
+
+サンプル平均 $\overline{X}$は，
+
+$$
+\overline{X} = \frac{1}{N} \sum_{k=1}^{N} X_k
+$$
+
+で求められます．サンプル平均$ \overline{X}$のように，確率変数 $X_1,X_2 \cdots X_N$から計算される値のことを**統計量**といいます．
+
+サンプル平均$ \overline{X}$と母平均$µ$については$E[\overline{X}] = µ$が成り立つのでした．つまり，サンプル平均は母平均の普遍統計量です．
+
+他の統計量として，
+
+$$
+U^2 =\frac{1}{N-1} \sum_{k=1}^N (X_k - \overline {X})^2
+$$
+
+で定義される不偏分散$U^2$があります．普遍という名前の通り，母分散$σ^2$とは$E[U^2]=σ^2$の関係が成り立ちます．一方，サンプル分散$$S^2 =\frac{1}{N} \sum_{k=1}^N (X_k - \overline {X})^2$$も統計量ですが，これは$E[S^2]=\frac{N-1}{N}σ^2$であり，バイアスがあります．つまり，サンプル分散から母分散を推定しようとすると，系統誤差が生じてしまいます．
+
+今後使う統計量は，サンプル平均$ \overline{X}$と不偏分散$U^2$の2つだけです．
+
+サンプル分散$S^2$はサンプル自体の分散を求めるのには使えますが，知りたいのはサンプル自体の分散ではなく母分散です．現実世界で得られるもののほとんどはサンプルですが，知りたいのは母集団に関する情報です．サンプル自体には興味はないので，サンプルについて知れるサンプル分散ではなく，$E[U^2]=σ^2$を満たす不偏分散を使うことになります．
+
+なぜ分母をN-1とすると，期待値が母分散と一致するのかについて[こちら](https://manabitimes.jp/math/1035)を参照してください．
+
+## 8.2 <small>正規分布のいくつかの性質</small>
+
+ここで，正規分布には次の性質があります．
+
+<div class="my-8">
+
+A:和に関する再生性
+
+確率変数X,Yが独立で
+    $X \sim N(\mu_1,\sigma_1^{2})$
+    $Y \sim N(\mu_2,\sigma_2^{2})$
+のとき，
+    $X + Y \sim N(\mu_1 + \mu_2, \sigma_1^{2} + \sigma_2^{2})$
+</div>
+
+<div class="my-8">B:定数倍に関する再生性
+
+確率変数Xが
+ $X \sim N(\mu,\sigma^{2})$
+のとき，
+ $aX + b \sim N(a\mu + b,a^2\sigma^{2})$
+</div>
+
+<div class="my-8">C.標準正規分布
+
+確率変数Xが
+ $X \sim N(\mu,\sigma^{2})$
+のとき，
+ $\frac{X-\mu}{\sigma} \sim N(0,1)$
+このように，Xを $\frac{X-\mu}{\sigma}$ に変換することを標準化するという．
+</div>
+
+証明はいずれも[このサイト](https://risalc.info/src/st-normal-distribution-summary.html#rep)を参照してください．{.pb-10}
+
+## 8.3 <small>サンプル平均もまた，正規分布に従う．しかし分散は1/Nになっている．</small>
+
+事実A.B.から $X_k \sim N(μ, σ)$なら，
+
+$$ \overline{X} = \frac{1}{N} \sum_{k=1}^{N} X_k \sim N(\mu,\frac{\sigma^{2}}{N}) $$
+
+を示せます．<small>(この証明は，A.B.を使えば簡単に示せるので，わからないければぜひ確認してください．証明は[同じサイト](https://risalc.info/src/st-normal-distribution-summary.html#rep:~:text=%E8%A8%BC%E6%98%8E%E3%82%92%E8%A6%8B%E3%82%8B-,%E6%A8%99%E6%9C%AC%E5%B9%B3%E5%9D%87%E3%81%AE%E6%AD%A3%E8%A6%8F%E5%88%86%E5%B8%83,-%E6%AD%A3%E8%A6%8F%E5%88%86%E5%B8%83)にあります．)</small>
+
+これは正規分布からN個サンプルをとることを繰り返して，サンプル平均の分布を作っていくと
+
+- サンプル平均もまた，正規分布に従うこと
+- サンプル平均の平均は，母平均と一致すること
+- 分散は各サンプルの1/Nとなること
+
+を表しています．これは4.8において，集団Qからサンプルサイズを色々変えてサンプル平均の分布を調べた結果と一致しています．
+
+
+
+<div class="mx-auto my-8 text-sm" style="width: 450px">
+<span class="text-xl">結果1:</span>
+<div class="pb-1">集団Qからの，あるサンプルの分布．サンプルサイズ$N=100$．分散は$18.79cm^2$</div>
+<img src="/img/stats/サンプルサイズ100-2.png" alt="" srcset="" class="pb-3">
+<div>N=100のサンプルをたくさん集めてサンプル平均の分布をつくったもの．正規分布している．平均は母平均と一致し，分散は$0.018cm^2$で，それぞれのサンプルの1/100倍になっていることが分かる．</div>
+<img src="/img/stats/サンプル平均の平均N=100.png"  >
+</div>
+
+
+<div class="text-sm mx-auto pt-10 pb-4" style="width: 450px">
+<span class="text-xl">結果2:</span>
+<div>サンプルサイズNのサンプルのサンプル平均の分布．Nがk倍になると分散は1/k倍になっている．</div>
+<div class="overflow-y-scroll h-96" style="height: 600px; " class="pb-4">
+<img src="/img/stats/サンプル平均の平均N=100.png"  >
+<img src="/img/stats/サンプル平均の平均N=200.png"  >
+<img src="/img/stats/サンプル平均の平均N=400.png"  >
+<img src="/img/stats/サンプル平均の平均N=1000.png"  >
+</div>
+</div>
+
+サンプルサイズNが大きいほど散らばりが小さくなることは4.8の段階で分かりましたが，今や正規分布を当てはめたことで，分散$σ^2$は1/N倍に，散らばり$σ$は$\sqrt{\frac{1}{N}}$倍になることが分かります．正規分布の散らばり=山の幅はσ=標準偏差で決まっていたことを思い出しましょう．忘れた人は<a href="https://www.geogebra.org/calculator/mcpyfvzj" target="_blank" rel="noopener noreferrer">geogebraのアプリ</a>で確認してください．
+
+サンプル平均の標準偏差のことを<b>標準誤差</b>と言います．正規分布を導入することで，サンプル平均が平均的にどれだけ母平均と離れるか(標準誤差)を定量的に評価することができるようになりました．この例の場合には，標準誤差=$\sqrt{\frac{\sigma^2}{N}}$です．
+
+## 8.4 <small>サンプル平均を標準化する</small>
 
 サンプル平均$\overline{X}$について，
 
 $$ \overline{X} \sim N(\mu,\frac{\sigma^{2}}{N}) $$
 
-でした．さらに，事実Cを使えば，
+でした．さらに，事実Cを使って標準化すると，
 
 $$ z = \frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}} \sim N(0,1) $$ 
 
 が示せます． $N(0,1)$を**標準正規分布**といいます．
 
-## 7.10
+## 8.5 <small>標準正規分布の代表的な値を知る</small>
 
 標準正規分布について見ていきます．標準正規分布の確率密度関数は，
+
+\\[f(x) = \frac{1}{\sigma \sqrt{2\pi}}e^{\frac{-(x-\mu)^2}{2\sigma}} \\]
+
+に，$µ=0,\sigma^2=1$を代入して，
 
 $$f(x)= \frac{1}{\sqrt{2\pi}}e^{\frac {-x^2}{2}}$$ 
 
@@ -36,7 +148,7 @@ $$\int_a^b f(x) dx$$
 <img src="/img/stats/標準正規分布.png" alt="" srcset=""  url="https://en.wikipedia.org/wiki/Continuous_uniform_distribution" class="mr-0 ml-auto my-4" width="350px" >
 
 
-## 7.11
+## 8.6　<small>母分散既知の場合に母平均を区間推定する</small>
 
 以上の話を踏まえると，サンプル平均から母平均を定量的に推定することができます．まず，今までの話を簡単に復習します．
 
@@ -50,7 +162,7 @@ $$z = \frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}} \sim N(0,1)$$
 
 一方，私たちはμもσも知らないのでzの値を計算しようとしても，これらが未知数として残ってしまいます．
 
-ここで，7.10の結果から，例えば$P(-1.96≦z≦1.96)= 0.95$ です．つまり，サンプルをたくさん集めてzの値を集めていくと，全体の95%のサンプルのzは-1.96から1.96の間に入るということです．
+ここで，8.5の結果から，例えば$P(-1.96≦z≦1.96)= 0.95$ です．つまり，サンプルをたくさん集めてzの値を集めていくと，全体の95%のサンプルのzは-1.96から1.96の間に入るということです．
 
 zに $\frac{ \overline{X} - \mu }{\sqrt{\frac{\sigma^{2}}{N}}}$を戻すと，
 
@@ -62,7 +174,7 @@ $$ P( \overline{X} -1.96\sqrt{\frac{\sigma^{2}}{N}}  \leqq \mu \leqq \overline{X
 
 となります．2つの式は，Pの中身を変形しただけなので数学的には全く同じことを意味するのですが，ここで視点を神様から私たちに移します．私たちにとっては，$\overline{X},N$だけが既知です．しかし，特別ボーナスで，母分散の値も神様から教えてもらえたとしましょう．
 
-具体的に，集団Qをまた使って説明します．集団Qは母平均が100.50,母分散が4.3^2でした．
+具体的に，集団Qをまた使って説明します．集団Qは母平均が$100.50$,母分散が$18.48=4.3^2$でした．
 
 <img src="/img/stats/集団Qの身長分布.png" alt="" srcset="" class="mr-0 ml-auto my-4" width="450px" >
 
@@ -75,7 +187,7 @@ $$ P( \overline{X} -1.96\sqrt{\frac{\sigma^{2}}{N}}  \leqq \mu \leqq \overline{X
 
 $$ P( 100.3 \leqq \mu \leqq 101.9) = 0.95$$ 
 
-が分かります．つまり，$100.3 \leqq \mu^D \leqq 101.9$が成り立つ確率は95%だということです．母分散を教えてもらうというインチキはしましたが，サンプル平均から母平均を誤差つきで推定することができています．
+が分かります．つまり，<span class="border-b-2 border-green-400 inline-block">$100.3 \leqq \mu^D \leqq 101.9$が成り立つ確率は95%</span>だということです．母分散を教えてもらうというインチキはしましたが，サンプル平均から母平均を誤差つきで推定することができています．
 
 
 そして，その誤差の大きさは，どれだけの確信がほしいかで変わってきます．
@@ -90,21 +202,21 @@ $$ P( \overline{X} -3\sqrt{\frac{\sigma^{2}}{N}}  \leqq \mu \leqq \overline{X} +
 
 $$ P( 99.9 \leqq \mu \leqq 102.3) = 0.9974$$ 
 
-となります．一般的には $a \leqq \mu \leqq b$が成り立つ確率を高くすればするほど，a,bの範囲は広くなっていくことが分かります．そしてその広くなり方は，$\sqrt{\frac{\sigma^{2}}{N}}$に依存していることが分かります．つまり，母分散が大きいほど(元々のデータの散らばりが大きいほど)，サンプルサイズが小さいほど，推定幅が大きくなってしまうわけです．
+となります．つまり，<span class="border-b-2 border-green-400 inline-block">$99.9 \leqq \mu^D \leqq 102.3$が成り立つ確率は99.74%</span>ということです．一般的には $a \leqq \mu \leqq b$が成り立つ確率を高くすればするほど，a,bの範囲は広くなっていくことが分かります．そしてその広くなり方は，$\sqrt{\frac{\sigma^{2}}{N}}$に依存していることが分かります．つまり，母分散が大きいほど(元々のデータの散らばりが大きいほど)，サンプルサイズが小さいほど，推定幅が大きくなってしまうわけです．
 
-このような推定方法を**区間推定**といいます．そして，$P(a≦µ≦b)= 0.95$ となる区間$a≦µ≦b$ のことを母平均についての**95%信頼区間**といいます．一般に，$P(a≦µ≦b)= 1-α$ となる区間$a≦µ≦b$ のことを<b>(1-α)%信頼区間</b>といいます．このとき1-αを**信頼水準**と言います．
+このような推定方法を**区間推定**といいます．そして，$P(a≦µ≦b)= 0.95$ となる区間$a≦µ≦b$ のことを母平均についての**95%信頼区間**といいます．一般に，$P(a≦µ≦b)= 1-α$ となる区間$a≦µ≦b$ のことを<b>(1-α)%信頼区間</b>といいます．このとき1-αを**信頼水準**と言います．なぜ1-αという表記なのか，αとは何者なのかについては後ほど説明します．
 
-例えば，$P(-3≦z≦3)= 0.9974$を使った場合には，$ P( 88.2 \leqq \mu \leqq 114.1) = 0.9974$が求められたので，$88.2 \leqq \mu \leqq 114.1$は，99.74%信頼区間(1-α=0.9974なのでα=0.0026)となります．なぜ1-αという表記なのか，αとは何者なのかについては後ほど説明します．
+例えば，$P(-3≦z≦3)= 0.9974$を使った場合には，$ P( 99.9 \leqq \mu \leqq 102.3) = 0.9974$が求められたので，$99.9 \leqq \mu \leqq 102.3$は，99.74%信頼区間(1-α=0.9974なのでα=0.0026)となります．
 
-## 7.12
+## 8.7 <small>頻度主義的な区間推定の解釈の仕方</small>
 
 母分散が未知の場合にどうするか，という問題に移る前に，
 
-$a \leqq \mu \leqq b$が成り立つ確率は95%
+<span class="border-b-2 border-green-400 inline-block">$a \leqq \mu \leqq b$が成り立つ確率は95%</span>
 
 というとき，これが意味しているところについて頻度主義的な解釈に則って説明します．頻度主義とは何かについては後ほど説明しましょう．
 
-これはμがaからbの間にある確率は95%の確率，という意味ではありません．というのも，母集団は確定的なものなので，母平均も(私たちが知らないだけで)確定した一つの値をもつ定数であり，変数ではないからです．μが定数なら，a,bを定めたときには$a \leqq \mu \leqq b$は成り立っているか，成り立っていないかであり，具体的にa,bを定めた後に，$a \leqq \mu \leqq b$が成り立つ確率を考えることはできません．
+これはμがaからbの間にある確率は95%の確率，という意味**ではありません**．というのも，母集団は確定的なものなので，母平均も(私たちが知らないだけで)確定した一つの値をもつ定数であり，変数ではないからです．μが定数なら，a,bを具体的な数に定めたときには$a \leqq \mu \leqq b$は成り立っているか，成り立っていないかであり，具体的にa,bを定めた後に，$a \leqq \mu \leqq b$が成り立つ確率を考えることはできません．では<span class="border-b-2 border-green-400 inline-block">$a \leqq \mu \leqq b$が成り立つ確率は95%</span>は何を意味するのでしょうか？
 
 そもそも「$a \leqq \mu \leqq b$が成り立つ確率は95%」という主張は，
 
@@ -116,8 +228,6 @@ $$ P( \overline{X} -1.96\sqrt{\frac{\sigma^{2}}{N}}  \leqq \mu \leqq \overline{X
 
 $$ P( \overline{X} -1.96\sqrt{\frac{\sigma^{2}}{N}}  \leqq \mu \leqq \overline{X} +1.96\sqrt{\frac{\sigma^{2}}{N}}) = 0.95 $$ 
 
-の主張です．そこで特定のサンプルの値を代入した $a \leqq \mu \leqq b$については，値が定まった今や，これが成り立っているか，いないかは確定しているけれども，適当にサンプルを選んだときにA=1となる確率は95%なので，その意味で$a \leqq \mu \leqq b$は95%で成り立つ，という言葉を使っています．
-
-## 7.13
+の主張です．そこで特定のサンプルの値を代入した場合，例えば8.6での$100.3 \leqq \mu \leqq 101.9$については，値が定まった今や，これが成り立っているか，いないかは確定しているけれども，ランダムにサンプルを選んだときにA=1となる確率は95%なので，その意味で<span class="border-b-2 border-green-400 inline-block">$100.3 \leqq \mu \leqq 101.9$は95%で成り立つ</span>という言葉を使っています．
 
 それでは母分散$σ^2$が分からないときはどうしたら良いか，という問題を次にやっていきます．
